--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+9-14 [加州夫妇涉中国赴美生育旅游计划被定罪](/articles/voa/1012596.md)
+
+9-14 [台湾希望美国延迟交付的F-16V战机能在今年年底前开始出厂](/articles/voa/1012597.md)
+
 9-14 [美中在非洲加大争夺军事影响力](/articles/voa/1012598.md)
 
 9-14 [中俄宣传媒体如何报道或忽略美国大选各个方面](/articles/voa/1012599.md)
@@ -596,8 +600,4 @@
 9-3 [以色列工会举行总罢工，要求政府达成停火协议，促成人质获释](/articles/voa/1012894.md)
 
 9-3 [台湾经济部长：特朗普“盘子上东西太多”，误解了台湾芯片产业的作用](/articles/voa/1012895.md)
-
-9-3 [中国经历最热7月后，大片地区再遭最热8月](/articles/voa/1012896.md)
-
-9-2 [赖清德：中国“吞台”若真为领土完整，就应该去收复被俄罗斯占据的大清领土](/articles/voa/1012897.md)
 
