--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+9-14 [中国8月份工业生产、零售销售低迷](/articles/voa/1012594.md)
+
+9-14 [二十国集团同意共同努力打击虚假信息并制定人工智能指导方针](/articles/voa/1012595.md)
+
 9-14 [加州夫妇涉中国赴美生育旅游计划被定罪](/articles/voa/1012596.md)
 
 9-14 [台湾希望美国延迟交付的F-16V战机能在今年年底前开始出厂](/articles/voa/1012597.md)
@@ -596,8 +600,4 @@
 9-3 [台风 “珊珊”猛烈来袭 中国游客体验日中救灾差异](/articles/voa/1012892.md)
 
 9-3 [中国恢复进口台湾文旦柚，专家:“将水果当成统战工具”](/articles/voa/1012893.md)
-
-9-3 [以色列工会举行总罢工，要求政府达成停火协议，促成人质获释](/articles/voa/1012894.md)
-
-9-3 [台湾经济部长：特朗普“盘子上东西太多”，误解了台湾芯片产业的作用](/articles/voa/1012895.md)
 
