--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+9-14 [中国男子搭橡皮艇试图非法入境 在台湾海岸附近被发现脱水送医](/articles/voa/1012592.md)
+
+9-14 [中国谴责德国两艘军舰穿越台湾海峡 称这“增加安全风险](/articles/voa/1012593.md)
+
 9-14 [中国8月份工业生产、零售销售低迷](/articles/voa/1012594.md)
 
 9-14 [二十国集团同意共同努力打击虚假信息并制定人工智能指导方针](/articles/voa/1012595.md)
@@ -596,8 +600,4 @@
 9-3 [中国经济困境导致股市波动](/articles/voa/1012890.md)
 
 9-3 [数千名美国酒店员工在劳工节周末罢工](/articles/voa/1012891.md)
-
-9-3 [台风 “珊珊”猛烈来袭 中国游客体验日中救灾差异](/articles/voa/1012892.md)
-
-9-3 [中国恢复进口台湾文旦柚，专家:“将水果当成统战工具”](/articles/voa/1012893.md)
 
