--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+9-14 [8月中国经济持续低迷，北京将出台更多刺激措施？](/articles/dw/1024302.md)
+
+9-14 [谭盾在贝多芬音乐节上致敬贝多芬](/articles/dw/1024303.md)
+
 9-14 [大幅上调对华关税 美国发布最终决定](/articles/dw/1024304.md)
 
 9-14 [中国新房价格呈9年最大跌幅](/articles/dw/1024305.md)
@@ -596,8 +600,4 @@
 8-14 [日本首相岸田文雄放弃角逐自民党總裁](/articles/dw/1024600.md)
 
 8-14 [巴厘岛计划征收旅游税以资助环境修复](/articles/dw/1024601.md)
-
-8-14 [華為擬推AI晶片挑戰英偉達 擺脫美國枷鎖](/articles/dw/1024602.md)
-
-8-13 [突袭俄罗斯，乌克兰意欲何为？](/articles/dw/1024603.md)
 
