--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+9-14 [驻美经贸办料关闭 香港国际地位岌岌可危](/articles/voa/1012590.md)
+
+9-14 [世界媒体看中国 - 垃圾时间与当局忙碌](/articles/voa/1012591.md)
+
 9-14 [中国男子搭橡皮艇试图非法入境 在台湾海岸附近被发现脱水送医](/articles/voa/1012592.md)
 
 9-14 [中国谴责德国两艘军舰穿越台湾海峡 称这“增加安全风险](/articles/voa/1012593.md)
@@ -596,8 +600,4 @@
 9-3 [英国以存在违反国际人道法风险为原因而暂停向以色列出口某些武器](/articles/voa/1012888.md)
 
 9-3 [菲律宾当局拘留160多名网络犯罪嫌疑人，多数为中国和印尼人](/articles/voa/1012889.md)
-
-9-3 [中国经济困境导致股市波动](/articles/voa/1012890.md)
-
-9-3 [数千名美国酒店员工在劳工节周末罢工](/articles/voa/1012891.md)
 
