--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+9-15 [鸡蛋bot｜雪琴的这条路](/articles/cdt/337112.md)
+
 9-14 [小鸮｜想念雪琴](/articles/cdt/337127.md)
 
 9-14 [维权网｜黄雪琴辩护人徐凯律师紧急呼吁：黄雪琴案二审被违法秘密宣判！](/articles/cdt/337133.md)
@@ -598,6 +600,4 @@
 8-9 [每日一语 2024.8.8](/articles/cdt/338157.md)
 
 8-9 [【404文库】“持证上网：就像持证呼吸一样荒诞”（外二篇）](/articles/cdt/338166.md)
-
-8-9 [【404文库】界面新闻｜疑“非法购买遗体”的山西奥瑞是谁？“同种异体骨移植”又是什么？](/articles/cdt/338167.md)
 
