--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+9-15 [教宗方济各抨击哈里斯和特朗普都“反对生命”](/articles/voa/1012577.md)
+
+9-15 [缅甸军政府罕见请求外国援助 以应对台风“摩羯”带来的致命洪灾](/articles/voa/1012578.md)
+
 9-15 [俄乌经阿联酋斡旋交换206名战俘](/articles/voa/1012579.md)
 
 9-15 [苏丹城市被轰击，分析人士说爆发空前战斗](/articles/voa/1012580.md)
@@ -596,8 +600,4 @@
 9-3 [普京在战争罪指控的阴影下会晤蒙古总统](/articles/voa/1012875.md)
 
 9-3 [中国宣布对加拿大油菜籽和化工品发起反倾销调查](/articles/voa/1012876.md)
-
-9-3 [中国山东一校车冲撞人群致11死13伤](/articles/voa/1012877.md)
-
-9-3 [中国和南非同意寻求贸易平衡和增加更多投资](/articles/voa/1012878.md)
 
