--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,14 @@
 德国之声
 ------
 
+9-15 [德国有约5000座桥梁急需修缮](/articles/dw/1024297.md)
+
+9-15 [荣誉市民希特勒？ 小城师生呼吁厘清历史](/articles/dw/1024298.md)
+
+9-15 [德国正陷入移民危机？](/articles/dw/1024299.md)
+
+9-15 [安全疑虑加剧 德国收紧边境管制](/articles/dw/1024300.md)
+
 9-14 [去美元化：人民币能走多远？](/articles/dw/1024301.md)
 
 9-14 [8月中国经济持续低迷，北京将出台更多刺激措施？](/articles/dw/1024302.md)
@@ -592,12 +600,4 @@
 8-15 [中國房市難振 七月經濟數據打擊5％目標](/articles/dw/1024595.md)
 
 8-14 [中国前海军船长非法入境台湾受到正式起诉](/articles/dw/1024596.md)
-
-8-14 [中国重新提交在伦敦修建新大使馆的计划](/articles/dw/1024597.md)
-
-8-14 [德国检方向涉嫌参与炸毁北溪天然气管道的乌克兰人发出逮捕令](/articles/dw/1024598.md)
-
-8-14 [“去风险”？德国对华直接投资上升](/articles/dw/1024599.md)
-
-8-14 [日本首相岸田文雄放弃角逐自民党總裁](/articles/dw/1024600.md)
 
