--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+9-15 [委内瑞拉以涉嫌“颠覆”国家的理由逮捕美国、西班牙和捷克公民](/articles/voa/1012575.md)
+
+9-15 [北约官员称乌克兰有充份军事理由使用西方武器打击俄罗斯](/articles/voa/1012576.md)
+
 9-15 [教宗方济各抨击哈里斯和特朗普都“反对生命”](/articles/voa/1012577.md)
 
 9-15 [缅甸军政府罕见请求外国援助 以应对台风“摩羯”带来的致命洪灾](/articles/voa/1012578.md)
@@ -596,8 +600,4 @@
 9-3 [无国界记者对中国公民记者张展据传再次被捕表示关注](/articles/voa/1012873.md)
 
 9-3 [美国气候特使波德斯塔本周将赴北京举行双边气候会谈](/articles/voa/1012874.md)
-
-9-3 [普京在战争罪指控的阴影下会晤蒙古总统](/articles/voa/1012875.md)
-
-9-3 [中国宣布对加拿大油菜籽和化工品发起反倾销调查](/articles/voa/1012876.md)
 
