--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+9-15 [自媒体文章精选｜人大报告揭示：哪些是相信遥遥领先的人](/articles/cdt/337101.md)
+
 9-15 [阿强同志｜一个中年同志的20年：扔掉“变态”的枷锁，现在的生活就像“天亮了”！](/articles/cdt/337102.md)
 
 9-15 [古道西风冷月｜有些统计数据无论怎么测量，它都测不准](/articles/cdt/337105.md)
@@ -598,6 +600,4 @@
 8-10 [每日一语 2024.8.9](/articles/cdt/338121.md)
 
 8-9 [【敏感词库】倒卖尸体、遗体倒卖、尸体贩卖](/articles/cdt/338151.md)
-
-8-9 [【404文库】财新｜遗体黑市背后：同种异体骨如何用于临床？如何获取？](/articles/cdt/338153.md)
 
