--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+9-15 [胡塞武装导弹首次打到以色列中部，但没有人员伤亡报告](/articles/voa/1012569.md)
+
 9-15 [台风“贝碧嘉”可能直接登陆上海，当局呼吁民众“非必要不外出”](/articles/voa/1012570.md)
 
 9-15 [经济寒流不只“冻”到“舌尖上的中国”](/articles/voa/1012571.md)
@@ -598,6 +600,4 @@
 9-4 [太平洋警务倡议将削弱中国影响力，分析:北京反制恐无效](/articles/voa/1012867.md)
 
 9-4 [一向对北京态度温和的新西兰发出警告：警惕中国“威胁”](/articles/voa/1012868.md)
-
-9-4 [以军打死去年10月7日恐袭以色列视频中的哈马斯武装分子](/articles/voa/1012869.md)
 
