--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -27,6 +27,8 @@
 
 9-14 [每日一语 2024.9.13](/articles/cdt/337135.md)
 
+9-16 [【网络民议】【CDTV】“国家只是让你尽量拿不到退休金，其他死不死，活不活它可不管”](/articles/cdt/337136.md)
+
 9-14 [【404文库】“时代在召唤中国的马丁路德金。今天的社会需要不同阶层的沟通谈判机制！”（外二篇）](/articles/cdt/337142.md)
 
 9-13 [看客inSight｜农村女性的墓碑上，没有自己的姓名](/articles/cdt/337148.md)
@@ -598,6 +600,4 @@
 9-1 [【中国哭墙】就让我们来看看，“哭墙”和“长城”，哪个会先塌吧（8月1日-8月31日，2024年）](/articles/cdt/338112.md)
 
 8-10 [常识流通处｜“早知如此，何必当初！”发出这种感慨的，不只是跑路的孟国总理](/articles/cdt/338116.md)
-
-8-10 [法规指南｜中级人民法院 副院长网上喊冤](/articles/cdt/338117.md)
 
