--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+9-16 [北京香山论坛期间美中再次举行军事政策会晤](/articles/voa/1012567.md)
+
 9-15 [英外交大臣拉米称普京威胁纯为“咆哮”，俄军星期天持续对乌空袭](/articles/voa/1012568.md)
 
 9-15 [胡塞武装导弹首次打到以色列中部，但没有人员伤亡报告](/articles/voa/1012569.md)
@@ -598,6 +600,4 @@
 9-4 [纽约州州长前华裔副幕僚长被FBI逮捕，被控中国政府代理人](/articles/voa/1012865.md)
 
 9-4 [香港民主党提施政报告建议 呼吁当局让社会各界畅所欲言](/articles/voa/1012866.md)
-
-9-4 [太平洋警务倡议将削弱中国影响力，分析:北京反制恐无效](/articles/voa/1012867.md)
 
