--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+9-16 [美中军事领导人结束南中国海等议题的讨论](/articles/voa/1012566.md)
+
 9-16 [北京香山论坛期间美中再次举行军事政策会晤](/articles/voa/1012567.md)
 
 9-15 [英外交大臣拉米称普京威胁纯为“咆哮”，俄军星期天持续对乌空袭](/articles/voa/1012568.md)
@@ -598,6 +600,4 @@
 9-4 [俄导弹袭击致乌克兰220多人伤亡，美接近同意向乌提供远程导弹](/articles/voa/1012864.md)
 
 9-4 [纽约州州长前华裔副幕僚长被FBI逮捕，被控中国政府代理人](/articles/voa/1012865.md)
-
-9-4 [香港民主党提施政报告建议 呼吁当局让社会各界畅所欲言](/articles/voa/1012866.md)
 
