--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+9-16 [美国特勤局在特朗普高尔夫俱乐部附近向持枪嫌疑人开枪，特朗普安然无恙](/articles/voa/1012564.md)
+
 9-16 [美国特勤局在特朗普高尔夫俱乐部附近向持枪嫌疑人开枪，特朗普安然无恙](/articles/voa/1012565.md)
 
 9-16 [美中军事领导人结束南中国海等议题的讨论](/articles/voa/1012566.md)
@@ -598,6 +600,4 @@
 9-4 [普京不顾国际通缉访问蒙古 当地人怎么看？](/articles/voa/1012862.md)
 
 9-4 [中国内需不振转向非洲买家，中欧竞争给安哥拉带来机会](/articles/voa/1012863.md)
-
-9-4 [俄导弹袭击致乌克兰220多人伤亡，美接近同意向乌提供远程导弹](/articles/voa/1012864.md)
 
