--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+9-16 [媒体：企图刺杀特朗普的嫌疑人被识别](/articles/voa/1012560.md)
+
+9-16 [来自中国的“鸦片战争”？美专家指中共蓄意利用芬太尼从“内部掏空”美国](/articles/voa/1012561.md)
+
 9-16 [美国联邦调查局：特朗普附近的枪击“似乎是一次暗杀企图”](/articles/voa/1012562.md)
 
 9-16 [美国国务院：中国释放被美国称被错误监禁的美国牧师林大卫](/articles/voa/1012563.md)
@@ -596,8 +600,4 @@
 9-4 [中非合作论坛北京开幕 非洲民众希望领导人不要牺牲长远利益](/articles/voa/1012858.md)
 
 9-4 [冻卵在韩国日益流行，给予女性更多选择](/articles/voa/1012859.md)
-
-9-4 [汤加首相称警察提供“免于恐惧的自由”，并且支持民主](/articles/voa/1012860.md)
-
-9-4 [官员证实，土耳其希望加入金砖国家集团](/articles/voa/1012861.md)
 
