--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,10 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+9-16 [【立此存照、404文库】安博通｜嘿！我看到你“翻墙”了！](/articles/cdt/337078.md)
+
+9-16 [每日一语 2024.9.15](/articles/cdt/337081.md)
+
 9-16 [【CDT报告汇】上海美国商会：会员公司盈利创历史新低，对中国市场预期悲观（外二篇）](/articles/cdt/337091.md)
 
 9-15 [【异闻观止】国家安全部｜天降桃花运？小心是“桃花劫”](/articles/cdt/337094.md)
@@ -596,8 +600,4 @@
 8-12 [【CDT周报】第182期：生前当韭菜，死后成耗材](/articles/cdt/338104.md)
 
 8-10 [阿斗凿墙｜一枚：纽约中央公园的三个长椅](/articles/cdt/338107.md)
-
-8-10 [中国新闻周刊｜多地披露殡葬领域腐败案件](/articles/cdt/338108.md)
-
-9-1 [【中国哭墙】就让我们来看看，“哭墙”和“长城”，哪个会先塌吧（8月1日-8月31日，2024年）](/articles/cdt/338112.md)
 
