--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+9-16 [当局称特朗普在第二次暗杀袭击后安然无恙](/articles/voa/1012559.md)
+
 9-16 [媒体：企图刺杀特朗普的嫌疑人被识别](/articles/voa/1012560.md)
 
 9-16 [来自中国的“鸦片战争”？美专家指中共蓄意利用芬太尼从“内部掏空”美国](/articles/voa/1012561.md)
@@ -598,6 +600,4 @@
 9-4 [民进党秘书长林右昌访华盛顿与美官员交流：盼美对台情势有正确认知](/articles/voa/1012857.md)
 
 9-4 [中非合作论坛北京开幕 非洲民众希望领导人不要牺牲长远利益](/articles/voa/1012858.md)
-
-9-4 [冻卵在韩国日益流行，给予女性更多选择](/articles/voa/1012859.md)
 
