--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+9-16 [孟常｜纸面上讲，咱们的退休年龄确实太低了](/articles/cdt/337071.md)
+
 9-16 [错题家｜老来难](/articles/cdt/337073.md)
 
 9-16 [【立此存照、404文库】安博通｜嘿！我看到你“翻墙”了！](/articles/cdt/337078.md)
@@ -598,6 +600,4 @@
 8-11 [大爱清尘｜尘肺病侵入“90后”，被粉尘窒息的青春](/articles/cdt/338101.md)
 
 8-11 [【404文库】基本常识｜文章被删了，但硬骨头还在](/articles/cdt/338103.md)
-
-8-12 [【CDT周报】第182期：生前当韭菜，死后成耗材](/articles/cdt/338104.md)
 
