--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -41,6 +41,10 @@
 
 9-14 [【404文库】“时代在召唤中国的马丁路德金。今天的社会需要不同阶层的沟通谈判机制！”（外二篇）](/articles/cdt/337142.md)
 
+9-16 [【CDT关注】自由亚洲｜刘晓波铜像爱尔兰高威大学揭幕 校方无惧中共压力创全球大学先河](/articles/cdt/337144.md)
+
+9-16 [【CDT关注】NPR｜一位高调批评中共的异议人士会设下骗局吗？](/articles/cdt/337146.md)
+
 9-13 [看客inSight｜农村女性的墓碑上，没有自己的姓名](/articles/cdt/337148.md)
 
 9-13 [孙立平｜过剩产能出清之日，就是真正拐点到来之时](/articles/cdt/337153.md)
@@ -596,8 +600,4 @@
 8-11 [剥洋葱people｜8年终消掉的“犯罪记录”](/articles/cdt/338096.md)
 
 8-11 [【重温】Kita｜Uyghur Voices：我所推荐的三档维吾尔 Podcasts](/articles/cdt/338099.md)
-
-8-11 [大爱清尘｜尘肺病侵入“90后”，被粉尘窒息的青春](/articles/cdt/338101.md)
-
-8-11 [【404文库】基本常识｜文章被删了，但硬骨头还在](/articles/cdt/338103.md)
 
