--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+9-16 [TikTok在美国的未来悬而未决 将取决于联邦法院裁决](/articles/voa/1012556.md)
+
 9-16 [“贝碧嘉”登陆上海 1949年以来袭沪最强台风](/articles/voa/1012557.md)
 
 9-16 [撤出南中国海争议浅滩后, 菲律宾表示“没有失去”, 未来将继续部署船舰](/articles/voa/1012558.md)
@@ -598,6 +600,4 @@
 9-4 [前纽约州长助理孙雯被控非法充当中国政府代理人，被告首度出庭辩称无罪](/articles/voa/1012854.md)
 
 9-4 [美国再次呼吁以色列、哈马斯达成停火协议](/articles/voa/1012855.md)
-
-9-4 [中国用海上行动考验美国的印太地区承诺](/articles/voa/1012856.md)
 
