--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+9-16 [香港新国安法首例 诸启邦因穿着“煽动性”T恤而被定罪](/articles/voa/1012554.md)
+
+9-16 [经济表现逊于预期 高盛、花旗、大摩调降中国增长预测](/articles/voa/1012555.md)
+
 9-16 [TikTok在美国的未来悬而未决 将取决于联邦法院裁决](/articles/voa/1012556.md)
 
 9-16 [“贝碧嘉”登陆上海 1949年以来袭沪最强台风](/articles/voa/1012557.md)
@@ -596,8 +600,4 @@
 9-4 [美国寻求安抚选民：总统选举是安全的](/articles/voa/1012852.md)
 
 9-4 [美国指控哈马斯领导人辛瓦尔和其他激进分子发动去年10月7日对以色列的大屠杀](/articles/voa/1012853.md)
-
-9-4 [前纽约州长助理孙雯被控非法充当中国政府代理人，被告首度出庭辩称无罪](/articles/voa/1012854.md)
-
-9-4 [美国再次呼吁以色列、哈马斯达成停火协议](/articles/voa/1012855.md)
 
