--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+9-16 [教皇方济各对梵中关系表示满意](/articles/dw/1024287.md)
+
+9-16 [客座评论：菲律宾海警船撤离仙宾礁背后的原因](/articles/dw/1024288.md)
+
 9-16 [巡逻舰撤离南海争议岛礁 菲律宾：绝没有弃守](/articles/dw/1024289.md)
 
 9-16 [川普再傳遭暗殺未遂 槍手動機尚待釐清](/articles/dw/1024290.md)
@@ -596,8 +600,4 @@
 8-16 [悬念大师：纪念希区柯克诞辰125周年](/articles/dw/1024585.md)
 
 8-16 [阿里巴巴发布最新季度财报 净利润同比下降29%](/articles/dw/1024586.md)
-
-8-16 [中國限制關鍵戰略金屬銻出口 歐美料受衝擊](/articles/dw/1024587.md)
-
-8-15 [帕劳总统指责中国“将旅游业武器化”](/articles/dw/1024588.md)
 
