--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,12 @@
 德国之声
 ------
 
+9-16 [七个问题了解德国扩大边境检查](/articles/dw/1024283.md)
+
+9-16 [与冯德莱恩关系紧张 法国欧盟专员辞职](/articles/dw/1024284.md)
+
+9-16 [大众在中国电动车市场艰难求生](/articles/dw/1024285.md)
+
 9-16 [申请专利：中国7纳米芯片光刻技术取得突破](/articles/dw/1024286.md)
 
 9-16 [教皇方济各对梵中关系表示满意](/articles/dw/1024287.md)
@@ -594,10 +600,4 @@
 8-16 [北溪管道：天然气、政治与战争](/articles/dw/1024581.md)
 
 8-16 [印度女医生在医院遭奸杀 抗议浪潮蔓延全国](/articles/dw/1024582.md)
-
-8-16 [史上最年轻：佩通坦当选泰国新一届总理](/articles/dw/1024583.md)
-
-8-16 [希腊大火逼近雅典 火势凶猛 居民疏散](/articles/dw/1024584.md)
-
-8-16 [悬念大师：纪念希区柯克诞辰125周年](/articles/dw/1024585.md)
 
