--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+9-16 [蒲黄榆说：砸锅卖铁、延长退休、苦力主义：北京踏入一个灰犀牛阵](/articles/voa/1012552.md)
+
+9-16 [国际民主日洛杉矶异议人士集会要求中共停止迫害民主人士，称独裁者无资格代表中国](/articles/voa/1012553.md)
+
 9-16 [香港新国安法首例 诸启邦因穿着“煽动性”T恤而被定罪](/articles/voa/1012554.md)
 
 9-16 [经济表现逊于预期 高盛、花旗、大摩调降中国增长预测](/articles/voa/1012555.md)
@@ -596,8 +600,4 @@
 9-4 [中国与尼日利亚建立全面战略伙伴关系 承诺鼓励企业赴尼投资](/articles/voa/1012850.md)
 
 9-4 [起诉书详细披露前纽约州长助理孙雯被控中共代理人案细节：成功阻止州长与蔡英文会面](/articles/voa/1012851.md)
-
-9-4 [美国寻求安抚选民：总统选举是安全的](/articles/voa/1012852.md)
-
-9-4 [美国指控哈马斯领导人辛瓦尔和其他激进分子发动去年10月7日对以色列的大屠杀](/articles/voa/1012853.md)
 
