--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,12 @@
 美国之音
 ------
 
+9-17 [侵乌战争中损兵折将，普京下令扩兵18万人，使俄军作战人数达到150万人](/articles/voa/1012544.md)
+
+9-17 [特朗普二度躲过暗杀，中国网民热议臆测四起](/articles/voa/1012545.md)
+
+9-17 [深化战略合作，中俄海军在日本海进行导弹和火炮发射演习](/articles/voa/1012546.md)
+
 9-16 [香港记协指各界对数十名记者被系统性滋扰未及以往重视](/articles/voa/1012547.md)
 
 9-16 [涉嫌试图刺杀特朗普的枪手瑞恩·罗斯持强烈的挺乌反俄和亲台反中立场](/articles/voa/1012548.md)
@@ -594,10 +600,4 @@
 9-4 [以军空袭黎巴嫩南部真主党目标 回击真主党火箭弹袭击](/articles/voa/1012842.md)
 
 9-4 [柬埔寨证实北京将赠与两艘战舰 或换取云朗海军基地独家使用权](/articles/voa/1012843.md)
-
-9-4 [乌克兰外长库列巴辞职，泽连斯基：政府大调整迎接严冬季节的到来](/articles/voa/1012844.md)
-
-9-4 [美国拟派遣更高级别官员率团参加北京香山论坛](/articles/voa/1012845.md)
-
-9-4 [中国国安部要青年学子警惕“帅哥美女境外间谍”](/articles/voa/1012846.md)
 
