--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+9-17 [暗杀特朗普嫌疑人受到两项与枪支有关的指控](/articles/voa/1012541.md)
+
 9-17 [“一颗老鼠屎坏了一锅粥”孙雯被控为“中共代理人”后，一些在美华人这么看](/articles/voa/1012542.md)
 
 9-17 [英国有影响力议员：英国应禁止新疆强迫劳动产品进口，严格审查希音上市](/articles/voa/1012543.md)
@@ -598,6 +600,4 @@
 9-5 [拜登对华关税决定为何迟迟不落地](/articles/voa/1012839.md)
 
 9-4 [美国在台协会处长：美国组印太同盟网以吓阻中国](/articles/voa/1012840.md)
-
-9-4 [美中气候特使在北京展开新一轮会谈，专家:美国大选给会谈带来不确定性](/articles/voa/1012841.md)
 
