--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,14 @@
 美国之音
 ------
 
+9-17 [拜登谴责针对特朗普的第二次未遂暗杀](/articles/voa/1012537.md)
+
+9-17 [美缉毒局努力阻止芬太尼流动之际关闭其两个中国办事处](/articles/voa/1012538.md)
+
+9-17 [华盛顿：欢迎林大卫从中国监狱获释回美返家，将继续推动释放其他被不当拘押的美国人](/articles/voa/1012539.md)
+
+9-17 [德国实施边境检查，移民辩论引发选举紧张](/articles/voa/1012540.md)
+
 9-17 [暗杀特朗普嫌疑人受到两项与枪支有关的指控](/articles/voa/1012541.md)
 
 9-17 [“一颗老鼠屎坏了一锅粥”孙雯被控为“中共代理人”后，一些在美华人这么看](/articles/voa/1012542.md)
@@ -592,12 +600,4 @@
 9-5 [香港海防博物馆更名抗战 专家: 中共改写历史美化自己](/articles/voa/1012835.md)
 
 9-5 [中共意欲为何发习近平旧文：不培养社会主义掘墓人](/articles/voa/1012836.md)
-
-9-5 [中国经济走软殃及公募基金，更多基金公司向高管们追索超标薪资](/articles/voa/1012837.md)
-
-9-5 [韩新领导人谴责平壤核武项目及朝俄军事合作,朝鲜再向韩国空飘垃圾气球](/articles/voa/1012838.md)
-
-9-5 [拜登对华关税决定为何迟迟不落地](/articles/voa/1012839.md)
-
-9-4 [美国在台协会处长：美国组印太同盟网以吓阻中国](/articles/voa/1012840.md)
 
