--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -13,6 +13,8 @@
 
 9-16 [【CDT报告汇】上海美国商会：会员公司盈利创历史新低，对中国市场预期悲观（外二篇）](/articles/cdt/337091.md)
 
+9-17 [【404媒体】“要是所有的媒体都能够追寻并披露真实的真相，又何需自媒体来写‘故事’ 呢？”(外二篇）](/articles/cdt/337092.md)
+
 9-15 [【异闻观止】国家安全部｜天降桃花运？小心是“桃花劫”](/articles/cdt/337094.md)
 
 9-15 [每日一语 2024.9.14](/articles/cdt/337096.md)
@@ -598,6 +600,4 @@
 8-11 [王左中右｜奥运会采访区挤满了孔乙己](/articles/cdt/338094.md)
 
 8-11 [剥洋葱people｜8年终消掉的“犯罪记录”](/articles/cdt/338096.md)
-
-8-11 [【重温】Kita｜Uyghur Voices：我所推荐的三档维吾尔 Podcasts](/articles/cdt/338099.md)
 
