--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+9-17 [在華遭囚18年 美國牧師林大衛獲釋返家](/articles/dw/1024280.md)
+
 9-16 [哈萨克斯坦总统告诉肖尔茨：军事上不可能战胜俄罗斯](/articles/dw/1024281.md)
 
 9-16 [“雪饼案”二审秘密宣判，辩护律师发布紧急呼吁](/articles/dw/1024282.md)
@@ -598,6 +600,4 @@
 8-16 [希音想要在欧上市 欧盟前高官当顾问](/articles/dw/1024578.md)
 
 8-16 [印度将在争议地区克什米尔举行议会选举](/articles/dw/1024579.md)
-
-8-16 [美国务院批准向德国出售600枚“爱国者”导弹](/articles/dw/1024580.md)
 
