--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+9-17 [美国批准出售价值约2.28亿美元军备件 台湾军方：有助维持战备](/articles/voa/1012525.md)
+
 9-17 [调查人员寻找暗杀特朗普未遂的嫌疑人动机](/articles/voa/1012526.md)
 
 9-17 [国际奥委会12年来首次选举新主席：职责是什么？七名候选人是谁](/articles/voa/1012527.md)
@@ -598,6 +600,4 @@
 9-5 [推特上的中国：中国驻纽约总领事离职以及孙雯案将如何影响美中关系？](/articles/voa/1012823.md)
 
 9-5 [专家：和中国打交道，非洲需要更有战略性和纪律性](/articles/voa/1012824.md)
-
-9-5 [中国驳斥美国检方对前纽约州长助理孙雯的指控，起底孙雯及其与中国的关系](/articles/voa/1012825.md)
 
