--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+9-17 [美联储会议前大多数亚股上涨，但日股下挫](/articles/voa/1012522.md)
+
 9-17 [至少200美国人遭中国施加强制措施 人权倡议者批中国政府“挟持人质”](/articles/voa/1012523.md)
 
 9-17 [通过香港等地非法出口美国无人机技术 一名俄罗斯公民在美被捕](/articles/voa/1012524.md)
@@ -598,6 +600,4 @@
 9-5 [习近平承诺未来三年向非洲提供逾500亿美元资金、创造百万就业机会](/articles/voa/1012820.md)
 
 9-5 [消息人士称拜登接近阻止日本制铁收购美国钢铁公司](/articles/voa/1012821.md)
-
-9-5 [“润”的新选择：对中国新移民而言，日本或比美国更具吸引力](/articles/voa/1012822.md)
 
