--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+9-17 [美国对抗中国的反舰武器战略：数量充足、机动灵活、杀伤力强](/articles/voa/1012521.md)
+
 9-17 [美联储会议前大多数亚股上涨，但日股下挫](/articles/voa/1012522.md)
 
 9-17 [至少200美国人遭中国施加强制措施 人权倡议者批中国政府“挟持人质”](/articles/voa/1012523.md)
@@ -598,6 +600,4 @@
 9-5 [教宗方济各访问东南亚最大清真寺并呼吁共同应对气候变化](/articles/voa/1012819.md)
 
 9-5 [习近平承诺未来三年向非洲提供逾500亿美元资金、创造百万就业机会](/articles/voa/1012820.md)
-
-9-5 [消息人士称拜登接近阻止日本制铁收购美国钢铁公司](/articles/voa/1012821.md)
 
