--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+9-17 [聿文视界：延迟退休是中国当局的国家违约](/articles/voa/1012519.md)
+
 9-17 [美日据称接近达成协议，限制对中国出口芯片技术](/articles/voa/1012520.md)
 
 9-17 [美国对抗中国的反舰武器战略：数量充足、机动灵活、杀伤力强](/articles/voa/1012521.md)
@@ -598,6 +600,4 @@
 9-5 [联合国秘书长称非洲无法充分获得债务减免将导致社会动荡](/articles/voa/1012817.md)
 
 9-5 [超级台风“摩羯”携狂风暴雨逼近中国南部](/articles/voa/1012818.md)
-
-9-5 [教宗方济各访问东南亚最大清真寺并呼吁共同应对气候变化](/articles/voa/1012819.md)
 
