--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+9-17 [冯德莱恩宣布新一届欧委会成员](/articles/dw/1024276.md)
+
+9-17 [英特尔推迟在德建厂计划 马格德堡颇为失望](/articles/dw/1024277.md)
+
 9-17 [德军舰22年来首次穿越台湾海峡 意义何在？](/articles/dw/1024278.md)
 
 9-17 [“不卖就禁”违宪？TikTok诉美国政府案开庭](/articles/dw/1024279.md)
@@ -596,8 +600,4 @@
 8-17 [稱台灣是「中國不動產」 澳洲前總理挨批](/articles/dw/1024574.md)
 
 8-17 [越共总书记苏林中国行  经贸合作料是重头戏](/articles/dw/1024575.md)
-
-8-17 [美国大选：沃尔兹的中国历史成为“靶心”](/articles/dw/1024576.md)
-
-8-17 [印度抗议继续  全国医生罢工](/articles/dw/1024577.md)
 
