--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+9-17 [德外长承诺向乌克兰追加1亿欧元援助](/articles/dw/1024273.md)
+
+9-17 [哈贝克会晤王文涛：欧中应谈判解决电动汽车关税问题](/articles/dw/1024274.md)
+
 9-17 [哈贝克会晤汪文涛：欧中应谈判解决电动汽车关税问题](/articles/dw/1024275.md)
 
 9-17 [冯德莱恩宣布新一届欧委会成员](/articles/dw/1024276.md)
@@ -596,8 +600,4 @@
 8-17 [中国青年失业率7月升至17.1%](/articles/dw/1024571.md)
 
 8-17 [伊朗账户利用ChatGPT影响美国大选](/articles/dw/1024572.md)
-
-8-17 [猴痘疫情激增  世卫组织敦促加紧生产疫苗](/articles/dw/1024573.md)
-
-8-17 [稱台灣是「中國不動產」 澳洲前總理挨批](/articles/dw/1024574.md)
 
