--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,12 @@
 美国之音
 ------
 
+9-17 [以色列称终止真主党对以北部袭击也是加沙战争目标之一](/articles/voa/1012515.md)
+
+9-17 [台湾陆战队长驻东沙岛 专家：监控预警南部解放军动态](/articles/voa/1012516.md)
+
+9-17 [美国调查中国加大对美出口浓缩铀是否帮助俄罗斯规避制裁](/articles/voa/1012517.md)
+
 9-17 [彰显维护各国航行权利及自由，美国海军反潜巡逻机再次飞越台湾海峡](/articles/voa/1012518.md)
 
 9-17 [聿文视界：延迟退休是中国当局的国家违约](/articles/voa/1012519.md)
@@ -594,10 +600,4 @@
 9-5 [中国力推人民币为跨境贸易货币，对冲未来美国的可能制裁？](/articles/voa/1012813.md)
 
 9-5 [中国经济艰难之际 习近平承诺援非3600亿人民币](/articles/voa/1012814.md)
-
-9-5 [日澳誓言强化军事合作，应对北京在印太热点地区的威胁](/articles/voa/1012815.md)
-
-9-5 [马来西亚总理安瓦尔表态：不会因北京抗议就停止南中国海油气勘探](/articles/voa/1012816.md)
-
-9-5 [联合国秘书长称非洲无法充分获得债务减免将导致社会动荡](/articles/voa/1012817.md)
 
