--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+9-18 [德国官员敦促欧盟与中国就电动汽车关税问题达成解决方案](/articles/voa/1012505.md)
+
+9-18 [国家媒体说，伊朗总统保证深化与莫斯科的关系](/articles/voa/1012506.md)
+
 9-18 [联合国调查组：委内瑞拉国内的压迫在总统选举后恶化](/articles/voa/1012507.md)
 
 9-18 [五角大楼监察长：乌克兰是国防部监督的“第一要务”](/articles/voa/1012508.md)
@@ -596,8 +600,4 @@
 9-6 [亨特·拜登据称将改变其联邦税务案中的无罪抗辩](/articles/voa/1012803.md)
 
 9-6 [美国宣布加紧对关键技术的出口管制，以防中国等对手获取敏感先进技术](/articles/voa/1012804.md)
-
-9-6 [职业外交官西比加出任乌克兰新外长](/articles/voa/1012805.md)
-
-9-6 [英国与台湾加强半导体合作 地缘政治挑战下寻求突破](/articles/voa/1012806.md)
 
