--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+9-18 [蓬佩奥告诉台湾入联宣达团：遗憾国务卿任内未做到保护香港自由，盼美继续为台湾做更多](/articles/voa/1012503.md)
+
+9-18 [缅甸侨民在中国驻华盛顿大使馆前抗议](/articles/voa/1012504.md)
+
 9-18 [德国官员敦促欧盟与中国就电动汽车关税问题达成解决方案](/articles/voa/1012505.md)
 
 9-18 [国家媒体说，伊朗总统保证深化与莫斯科的关系](/articles/voa/1012506.md)
@@ -596,8 +600,4 @@
 9-6 [太平洋岛国论坛凸显美中竞争](/articles/voa/1012801.md)
 
 9-6 [印尼驱逐被菲律宾指控犯有网络犯罪的市长郭华萍](/articles/voa/1012802.md)
-
-9-6 [亨特·拜登据称将改变其联邦税务案中的无罪抗辩](/articles/voa/1012803.md)
-
-9-6 [美国宣布加紧对关键技术的出口管制，以防中国等对手获取敏感先进技术](/articles/voa/1012804.md)
 
