--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+9-18 [特朗普再遭暗杀未遂，美国政治暴力加剧](/articles/nyt/1042380.md)
+
 9-18 [被中国囚禁18年，美国华裔牧师林大卫获释](/articles/nyt/1042381.md)
 
 9-14 [中国宣布提高法定退休年龄](/articles/nyt/1042382.md)
@@ -598,6 +600,4 @@
 6-14 [美国会议员就微软在华业务质询该公司总裁](/articles/nyt/1042678.md)
 
 6-14 [中国的无人驾驶汽车安全吗？我试乘了几辆](/articles/nyt/1042679.md)
-
-6-13 [中国，全球最大的无人驾驶试验场](/articles/nyt/1042680.md)
 
