--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+9-18 [美空军将领：俄罗斯比入侵乌克兰前规模更强大](/articles/voa/1012493.md)
+
+9-18 [台湾金阿波罗公司称其未生产黎巴嫩爆炸中使用的寻呼机](/articles/voa/1012494.md)
+
 9-18 [中国航母辽宁号编队驶过台湾东北海域](/articles/voa/1012495.md)
 
 9-18 [朝鲜一周内第二次发射短程弹道导弹](/articles/voa/1012496.md)
@@ -596,8 +600,4 @@
 9-6 [中国前央行行长易纲敦促努力应对通货紧缩压力](/articles/voa/1012791.md)
 
 9-6 [中国国足在世预赛中0比7惨败给日本 引发球迷和媒体抨击](/articles/voa/1012792.md)
-
-9-6 [美国担心日本制铁收购美国钢铁公司或影响重要的钢铁供应](/articles/voa/1012793.md)
-
-9-6 [岸田文雄对韩国进行告别访问 巩固其改善日韩关系政治遗产](/articles/voa/1012794.md)
 
