--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+9-18 [默尔茨的对华政策如何？曾呼吁总理访华会胡锦涛](/articles/dw/1024268.md)
+
+9-18 [肯尼亚的机器人餐厅](/articles/dw/1024269.md)
+
 9-18 [客座评论：对俄金融制裁中猫鼠博弈](/articles/dw/1024270.md)
 
 9-18 [黎巴嫩呼叫器遭連環引爆 金阿波羅否認台灣製造](/articles/dw/1024271.md)
@@ -596,8 +600,4 @@
 8-18 [霹靂舞迎來巴黎奧運光榮時刻－這能維持多久?](/articles/dw/1024566.md)
 
 8-18 [德国最早的华人故事：第一个到德国的华人是谁？周恩来来柏林的原因是什么？](/articles/dw/1024567.md)
-
-8-18 [韩防长：自主拥核将断送韩美同盟](/articles/dw/1024568.md)
-
-8-18 [中巴经济走廊为何在巴基斯坦引发大规模抗议活动？](/articles/dw/1024569.md)
 
