--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+9-18 [乌军无人机大规模攻击俄纵深，触发一主要军火库地震般爆炸](/articles/voa/1012487.md)
+
 9-18 [“918”敏感日，深圳一日本男孩被凶手刺伤，外国人在华安全再次引起关注](/articles/voa/1012488.md)
 
 9-18 [真主党寻呼机爆炸案中发现从台湾到匈牙利到摩萨德的神秘踪迹](/articles/voa/1012489.md)
@@ -598,6 +600,4 @@
 9-6 [泽连斯基在德国会晤美国及盟国军事领导人，美国再宣布2.5亿美元援乌计划](/articles/voa/1012785.md)
 
 9-6 [北京战略牵制日本“琉球牌”化暗为明？](/articles/voa/1012786.md)
-
-9-6 [台湾总统赖清德“俄占领土”说引热议 分析:中国领土完整立场有双标](/articles/voa/1012787.md)
 
