--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+9-19 [消费持续疲软 中国人热议“通缩”](/articles/voa/1012483.md)
+
 9-19 [中国95个城市“鹤岗化” 房价跌成白菜价](/articles/voa/1012484.md)
 
 9-19 [芬兰总统呼吁扩大联合国安理会，废除一票否决，暂停侵略国家成员资格](/articles/voa/1012485.md)
@@ -598,6 +600,4 @@
 9-7 [中非论坛落幕 刚果希望满满 北京的承诺能兑现吗？](/articles/voa/1012781.md)
 
 9-7 [韩国三星前高管因涉嫌盗窃公司芯片技术给中国再次被捕](/articles/voa/1012782.md)
-
-9-7 [德国海军少将称要维护印太海洋通道安全，但不愿证实德国舰艇是否将过航台海](/articles/voa/1012783.md)
 
