--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+9-19 [美国发现并摧毁中国第二个主要黑客组织](/articles/voa/1012481.md)
+
+9-19 [美联储大幅下调基准利率半个百分点，显示通胀治理结束](/articles/voa/1012482.md)
+
 9-19 [消费持续疲软 中国人热议“通缩”](/articles/voa/1012483.md)
 
 9-19 [中国95个城市“鹤岗化” 房价跌成白菜价](/articles/voa/1012484.md)
@@ -596,8 +600,4 @@
 9-7 [从海上到空中 中菲南中国海对峙步入新阶段？](/articles/voa/1012779.md)
 
 9-7 [号称“中国辉达”的象帝先裁员重组，分析: 美中芯片战加剧中国困局](/articles/voa/1012780.md)
-
-9-7 [中非论坛落幕 刚果希望满满 北京的承诺能兑现吗？](/articles/voa/1012781.md)
-
-9-7 [韩国三星前高管因涉嫌盗窃公司芯片技术给中国再次被捕](/articles/voa/1012782.md)
 
