--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+9-19 [执法官员反驳有关特朗普集会附近汽车中发现爆炸物的网上虚假报道](/articles/voa/1012479.md)
+
+9-19 [中国男子的非法进入让人质疑台湾的海防](/articles/voa/1012480.md)
+
 9-19 [美国发现并摧毁中国第二个主要黑客组织](/articles/voa/1012481.md)
 
 9-19 [美联储大幅下调基准利率半个百分点，显示通胀治理结束](/articles/voa/1012482.md)
@@ -596,8 +600,4 @@
 9-7 [法官将特朗普封口费案量刑裁决推迟到11月大选之后](/articles/voa/1012777.md)
 
 9-7 [美国政府就香港营商风险发出更新警告](/articles/voa/1012778.md)
-
-9-7 [从海上到空中 中菲南中国海对峙步入新阶段？](/articles/voa/1012779.md)
-
-9-7 [号称“中国辉达”的象帝先裁员重组，分析: 美中芯片战加剧中国困局](/articles/voa/1012780.md)
 
