--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+9-19 [深圳日本人学校男童遭持刀袭击身亡](/articles/nyt/1042376.md)
+
 9-19 [出生率下降、老龄化加剧，中国“银发经济”迎来春天](/articles/nyt/1042377.md)
 
 9-18 [从孙雯案看中国海外秘密干预行动模式](/articles/nyt/1042378.md)
@@ -598,6 +600,4 @@
 6-17 [G7公报28处提及中国：措辞强硬、凸显对抗性](/articles/nyt/1042674.md)
 
 6-17 [独立记者黄雪琴、活动人士王建兵因“煽颠罪”获刑](/articles/nyt/1042675.md)
-
-6-14 [雪崩、冰瀑和死亡阴影：在喜马拉雅，夏尔巴人用生命谋生](/articles/nyt/1042676.md)
 
