--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,14 @@
 美国之音
 ------
 
+9-19 [台湾谴责中国取消对其农产品的关税豁免 陆委会：再次经济胁迫、无助两岸发展](/articles/voa/1012467.md)
+
+9-19 [“918”在深圳遇袭的日本10岁男孩不治身亡](/articles/voa/1012468.md)
+
+9-19 [美副国务卿：主导美中竞争的领域是技术](/articles/voa/1012469.md)
+
+9-19 [数千印度人被诱骗至东南亚 在中国人经营的“诈骗中心”从事网络犯罪](/articles/voa/1012470.md)
+
 9-19 [“我终于有儿子了！”: 揭秘俄罗斯“太子”们孤独而隐秘的生活](/articles/voa/1012471.md)
 
 9-19 [加州签署针对深伪政治广告、虚假信息的立法](/articles/voa/1012472.md)
@@ -592,12 +600,4 @@
 9-7 [超强台风“摩羯”袭击中国海南，造成2人死亡](/articles/voa/1012765.md)
 
 9-7 [美国佐治亚理工学院宣布将退出其深圳合作办学机构](/articles/voa/1012766.md)
-
-9-7 [美中军事指挥官将在“未来几周”进行通话 讨论预防冲突等问题](/articles/voa/1012767.md)
-
-9-7 [伊朗据报道已经或即将向俄罗斯转让弹道导弹，白宫对此表示“震惊”](/articles/voa/1012768.md)
-
-9-7 [“中共已经进门了”--从孙雯案看中共对美国渗透之深](/articles/voa/1012769.md)
-
-9-7 [选举日越来越近，美国对手加速施加影响](/articles/voa/1012770.md)
 
