--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+9-19 [常识流通处｜山东成武县一则“发展统计公报”火了：终于理解为何都往体制里钻](/articles/cdt/337028.md)
+
 9-18 [【404文库】独角鲸工作坊｜“日本小学生”遇袭，含糊其辞只能让事情变糟](/articles/cdt/337030.md)
 
 9-18 [【旧文重温】网易真话｜袁凌：宋彬彬身后的人们](/articles/cdt/337032.md)
@@ -598,6 +600,4 @@
 8-13 [张3丰的世界｜外卖员是在向冷酷的系统下跪](/articles/cdt/338045.md)
 
 8-13 [每日一语 2024.8.12](/articles/cdt/338047.md)
-
-8-12 [Renmine说｜前车之鉴：韩国网络实名制](/articles/cdt/338054.md)
 
