--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+9-19 [被中国拘押的美国人亲属沉痛发声 敦促政府帮助家人回国](/articles/voa/1012466.md)
+
 9-19 [台湾谴责中国取消对其农产品的关税豁免 陆委会：再次经济胁迫、无助两岸发展](/articles/voa/1012467.md)
 
 9-19 [“918”在深圳遇袭的日本10岁男孩不治身亡](/articles/voa/1012468.md)
@@ -598,6 +600,4 @@
 9-7 [波音公司的“星际客机”在无人驾驶的情况下返回地球](/articles/voa/1012764.md)
 
 9-7 [超强台风“摩羯”袭击中国海南，造成2人死亡](/articles/voa/1012765.md)
-
-9-7 [美国佐治亚理工学院宣布将退出其深圳合作办学机构](/articles/voa/1012766.md)
 
