--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+9-19 [台湾台塑集团高管传在中国遭拘留 陆委会称已掌握相关情事](/articles/voa/1012465.md)
+
 9-19 [被中国拘押的美国人亲属沉痛发声 敦促政府帮助家人回国](/articles/voa/1012466.md)
 
 9-19 [台湾谴责中国取消对其农产品的关税豁免 陆委会：再次经济胁迫、无助两岸发展](/articles/voa/1012467.md)
@@ -598,6 +600,4 @@
 9-7 [联合国安理会考虑为海地规划维和行动](/articles/voa/1012763.md)
 
 9-7 [波音公司的“星际客机”在无人驾驶的情况下返回地球](/articles/voa/1012764.md)
-
-9-7 [超强台风“摩羯”袭击中国海南，造成2人死亡](/articles/voa/1012765.md)
 
