--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,12 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+9-19 [【404文库】深圳客｜想给那个日本孩子说声对不起！](/articles/cdt/337021.md)
+
+9-19 [每日一语 2024.9.18](/articles/cdt/337023.md)
+
+9-19 [城市的地得｜我依然为那个日本男孩感到悲伤](/articles/cdt/337025.md)
+
 9-19 [昊轩洞见｜深圳日本人学校小学生遇袭，让我想到胡友平](/articles/cdt/337026.md)
 
 9-19 [常识流通处｜山东成武县一则“发展统计公报”火了：终于理解为何都往体制里钻](/articles/cdt/337028.md)
@@ -594,10 +600,4 @@
 8-14 [【旧文重温】澎湃人物｜外卖骑手，想走正门](/articles/cdt/338027.md)
 
 8-13 [【网络民议】跳水为什么几乎全世界都玩不过中国？](/articles/cdt/338034.md)
-
-8-13 [正面连接｜从家中偷走一个11岁女孩](/articles/cdt/338042.md)
-
-8-13 [天涯行路｜怪人们越来越“奇怪”？](/articles/cdt/338043.md)
-
-8-13 [张3丰的世界｜外卖员是在向冷酷的系统下跪](/articles/cdt/338045.md)
 
