--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+9-19 [X平台升级：部分巴西用户得以重新登录](/articles/dw/1024259.md)
+
 9-19 [泽连斯基：乌克兰“胜利计划“准备完备](/articles/dw/1024260.md)
 
 9-19 [日本男童深圳遭刺不治身亡：中日仇恨再升級？](/articles/dw/1024261.md)
@@ -598,6 +600,4 @@
 8-19 [专家：俄罗斯经济就像服了兴奋剂的马拉松选手](/articles/dw/1024557.md)
 
 8-19 [南海主權爭議升溫 中菲船隻互斥故意衝撞](/articles/dw/1024558.md)
-
-8-19 [失业率创新高 中国千万青年失业大军沦诈骗目标](/articles/dw/1024559.md)
 
