--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+9-19 [世界媒体看中国：经济援助内外有别](/articles/voa/1012462.md)
+
 9-19 [台湾称,国安单位“高度关注”黎巴嫩寻呼机爆炸事件 并否认与之有所关联](/articles/voa/1012463.md)
 
 9-19 [路透：美国将中程导弹系统留在菲律宾，测试战时部署](/articles/voa/1012464.md)
@@ -598,6 +600,4 @@
 9-7 [中国无力支薪网格员 分析：但维稳力度绝不放松](/articles/voa/1012760.md)
 
 9-7 [世界媒体看中国: 习近平有多英明](/articles/voa/1012761.md)
-
-9-7 [美英情报负责人联合呼吁加沙停火、坚持对乌克兰的支持](/articles/voa/1012762.md)
 
