--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+9-19 [纽约时报：位于匈牙利的BAC是以色列创办的幌子公司](/articles/dw/1024258.md)
+
 9-19 [X平台升级：部分巴西用户得以重新登录](/articles/dw/1024259.md)
 
 9-19 [泽连斯基：乌克兰“胜利计划“准备完备](/articles/dw/1024260.md)
@@ -598,6 +600,4 @@
 8-19 [35年前，改变德国命运的“泛欧洲野餐”](/articles/dw/1024556.md)
 
 8-19 [专家：俄罗斯经济就像服了兴奋剂的马拉松选手](/articles/dw/1024557.md)
-
-8-19 [南海主權爭議升溫 中菲船隻互斥故意衝撞](/articles/dw/1024558.md)
 
