--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+9-19 [哈里斯、特朗普谁更受蓝领青睐？美最大工会不背书](/articles/dw/1024256.md)
+
+9-19 [联大决议：以色列一年内结束对巴勒斯坦占领](/articles/dw/1024257.md)
+
 9-19 [纽约时报：位于匈牙利的BAC是以色列创办的幌子公司](/articles/dw/1024258.md)
 
 9-19 [X平台升级：部分巴西用户得以重新登录](/articles/dw/1024259.md)
@@ -596,8 +600,4 @@
 8-19 [德国出口全线败退 汽车仍是拳头产品](/articles/dw/1024554.md)
 
 8-19 [穿不穿台海？德军舰长等候柏林下命令](/articles/dw/1024555.md)
-
-8-19 [35年前，改变德国命运的“泛欧洲野餐”](/articles/dw/1024556.md)
-
-8-19 [专家：俄罗斯经济就像服了兴奋剂的马拉松选手](/articles/dw/1024557.md)
 
