--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+9-19 [日首相岸田文雄要求中国就日本男孩遇刺身亡事件做出解释](/articles/voa/1012461.md)
+
 9-19 [世界媒体看中国：经济援助内外有别](/articles/voa/1012462.md)
 
 9-19 [台湾称,国安单位“高度关注”黎巴嫩寻呼机爆炸事件 并否认与之有所关联](/articles/voa/1012463.md)
@@ -598,6 +600,4 @@
 9-7 [伊朗若成功拥核，中国“功不可没”，而美国或被赶出中东？](/articles/voa/1012759.md)
 
 9-7 [中国无力支薪网格员 分析：但维稳力度绝不放松](/articles/voa/1012760.md)
-
-9-7 [世界媒体看中国: 习近平有多英明](/articles/voa/1012761.md)
 
