--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,12 @@
 德国之声
 ------
 
+9-19 [德国拟向乌克兰追加4亿欧元军事援助](/articles/dw/1024253.md)
+
+9-19 [消息人士：上汽大众考虑关闭南京工厂](/articles/dw/1024254.md)
+
+9-19 [德国开始全线边境检查 对欧盟意味着什么？](/articles/dw/1024255.md)
+
 9-19 [哈里斯、特朗普谁更受蓝领青睐？美最大工会不背书](/articles/dw/1024256.md)
 
 9-19 [联大决议：以色列一年内结束对巴勒斯坦占领](/articles/dw/1024257.md)
@@ -594,10 +600,4 @@
 8-19 [电动车恐惧症蔓延韩国 中国制造电池受关注](/articles/dw/1024551.md)
 
 8-19 [客座评论：习近平左右摇摆 但依然心向普京](/articles/dw/1024552.md)
-
-8-19 [民主党全国代表大会：哈里斯的重要舞台](/articles/dw/1024553.md)
-
-8-19 [德国出口全线败退 汽车仍是拳头产品](/articles/dw/1024554.md)
-
-8-19 [穿不穿台海？德军舰长等候柏林下命令](/articles/dw/1024555.md)
 
