--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,7 +3,11 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+9-20 [【404文库】建设性意见｜建议权威部门尽快出台《仇恨指南》](/articles/cdt/337006.md)
+
 9-19 [【404文库】打冷｜他杀死的，是深圳人的孩子](/articles/cdt/337013.md)
+
+9-19 [【404文库】星球商业评论｜十岁男孩倒在蛇口街头](/articles/cdt/337015.md)
 
 9-19 [【404文库】深圳客｜想给那个日本孩子说声对不起！](/articles/cdt/337021.md)
 
@@ -596,8 +600,4 @@
 8-14 [每日一语 2024.8.13](/articles/cdt/338018.md)
 
 8-14 [每日电影漫谈｜已经不存在现实主义电影的土壤了](/articles/cdt/338022.md)
-
-8-14 [四环青年｜投资数亿元的有轨电车停摆，一次失败的“示范”](/articles/cdt/338025.md)
-
-8-14 [【旧文重温】澎湃人物｜外卖骑手，想走正门](/articles/cdt/338027.md)
 
