--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+9-20 [每日一语 2024.9.19](/articles/cdt/336993.md)
+
 9-20 [离散纪事｜“极端的民族主义，一定是与世界为敌。”](/articles/cdt/336996.md)
 
 9-20 [毛大庆｜从苏州到深圳，不再是“偶发事件”](/articles/cdt/337001.md)
@@ -598,6 +600,4 @@
 8-14 [【异闻观止】国家安全部｜境外反华势力渗透我青年学生群体](/articles/cdt/337980.md)
 
 8-14 [就叫熊太行也行｜千挑万选接班人，选中一个精神病](/articles/cdt/337982.md)
-
-8-14 [【404文库】互联网大观｜某小区发通知：今后不得妄议物业公司](/articles/cdt/337985.md)
 
