--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,14 @@
 美国之音
 ------
 
+9-20 [拜登称美联储通过降息发出“进展宣言”](/articles/voa/1012445.md)
+
+9-20 [美台国防工业会议将举行,主办方电邮系统遭网络袭击](/articles/voa/1012446.md)
+
+9-20 [西方外长在巴黎讨论了中东局势](/articles/voa/1012447.md)
+
+9-20 [美前众院议长佩洛西声援黎智英：我们对中共镇压人权感到失望](/articles/voa/1012448.md)
+
 9-20 [《金融时报》：对大众汽车新疆工厂的审计未达到国际标准](/articles/voa/1012449.md)
 
 9-20 [日本男孩深圳遇袭身亡，中国网民评价两极分化：“养蛊反噬”“因果报应”](/articles/voa/1012450.md)
@@ -592,12 +600,4 @@
 9-8 [教宗方济各为巴布亚新几内亚偏远丛林带来援助](/articles/voa/1012743.md)
 
 9-8 [荷兰扩大光刻机出口管制 中国表示“不满”](/articles/voa/1012744.md)
-
-9-8 [也门胡塞武装声称再击落一架美国MQ-9“死神”无人机](/articles/voa/1012745.md)
-
-9-8 [土耳其埃尔多安呼吁伊斯兰国家结盟对抗以色列](/articles/voa/1012746.md)
-
-9-8 [朝鲜持续增强海军力量的同时 美韩核磋商小组进行首次兵棋模拟训练](/articles/voa/1012747.md)
-
-9-8 [联合国推进加沙地带疫苗接种之际 以色列的袭击在48小时内造成61人死亡](/articles/voa/1012748.md)
 
