--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+9-20 [開放兩岸同婚 台灣：兼顧國家安全](/articles/dw/1024252.md)
+
 9-19 [德国拟向乌克兰追加4亿欧元军事援助](/articles/dw/1024253.md)
 
 9-19 [消息人士：上汽大众考虑关闭南京工厂](/articles/dw/1024254.md)
@@ -598,6 +600,4 @@
 8-19 [伊朗寻求中国侦察卫星技术 西方高度担忧](/articles/dw/1024550.md)
 
 8-19 [电动车恐惧症蔓延韩国 中国制造电池受关注](/articles/dw/1024551.md)
-
-8-19 [客座评论：习近平左右摇摆 但依然心向普京](/articles/dw/1024552.md)
 
