--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+9-20 [位于中美科技战核心的芯片制造商：中芯国际](/articles/nyt/1042373.md)
+
 9-19 [美国家庭领养中国孩子的时代结束了，他们如何看待这一切](/articles/nyt/1042374.md)
 
 9-19 [现代“特洛伊木马”：详解黎巴嫩寻呼机爆炸案](/articles/nyt/1042375.md)
@@ -598,6 +600,4 @@
 6-18 [报复性调查？中国威胁对欧洲进口猪肉征收关税](/articles/nyt/1042671.md)
 
 6-17 [中国人买买买造就东南亚“榴莲富豪”](/articles/nyt/1042672.md)
-
-6-17 [三名中国顶尖游泳运动员被披露两次药检呈阳性](/articles/nyt/1042673.md)
 
