--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+9-20 [欧盟推迟对华电动汽车关税表决 欧中关税战前景不明](/articles/voa/1012441.md)
+
 9-20 [十余名共和党参议员推出与中国竞争的“实质性”法案](/articles/voa/1012442.md)
 
 9-20 [美议员跨党提出法案，加大力度打击强迫维吾尔人劳动](/articles/voa/1012443.md)
@@ -598,6 +600,4 @@
 9-8 [委内瑞拉反对党领导人获西班牙庇护后搭机前往马德里](/articles/voa/1012739.md)
 
 9-8 [继锗和镓后，中国限制稀有战略金属锑的出口，美国会被“报复”到吗？](/articles/voa/1012740.md)
-
-9-8 [约旦和西岸边境口岸发生以哈冲突以来首次袭击，枪手打死三名以色列平民](/articles/voa/1012741.md)
 
