--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,7 +3,13 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+9-20 [罗洁琪｜向遇害的10岁中日男孩致哀](/articles/cdt/336977.md)
+
+9-20 [王开东｜我拒绝一切仇恨教育](/articles/cdt/336978.md)
+
 9-20 [【CDT关注】东京人文论坛｜部分在日中国人关于深圳918日籍学童遇袭事件的联署声明](/articles/cdt/336981.md)
+
+9-20 [【404文库】尼德罗｜一篇质量不高的文章，但就是发不出来](/articles/cdt/336991.md)
 
 9-20 [每日一语 2024.9.19](/articles/cdt/336993.md)
 
@@ -594,10 +600,4 @@
 8-15 [岭南酷儿Lingnan queer｜无法挣脱的暗网：性少数扭转“治疗”](/articles/cdt/337971.md)
 
 8-15 [星球商业评论｜富士康来都来了](/articles/cdt/337973.md)
-
-8-15 [界面文化｜最听话的孩子们，长大后成为了极权最忠实的帮凶](/articles/cdt/337975.md)
-
-8-14 [【404文库】澎湃新闻｜潜江市长要求杜绝行政诉讼败诉发生，去年当地行诉案仅1件败诉](/articles/cdt/337978.md)
-
-8-14 [【异闻观止】国家安全部｜境外反华势力渗透我青年学生群体](/articles/cdt/337980.md)
 
