--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -9,9 +9,19 @@
 
 9-20 [【CDT关注】东京人文论坛｜部分在日中国人关于深圳918日籍学童遇袭事件的联署声明](/articles/cdt/336981.md)
 
+9-20 [赎罪券销售中心｜为什么要有日本人学校 ？](/articles/cdt/336984.md)
+
+9-20 [桃花潭李白｜仇恨机制，没道理可讲](/articles/cdt/336985.md)
+
+9-20 [竹不倒｜日企通知员工返回日本不算个好消](/articles/cdt/336986.md)
+
+9-20 [有病要讀書plus｜悼念那位日籍男孩：在罪恶中游泳的人，必将在悲哀中沉没](/articles/cdt/336987.md)
+
 9-20 [【404文库】尼德罗｜一篇质量不高的文章，但就是发不出来](/articles/cdt/336991.md)
 
 9-20 [每日一语 2024.9.19](/articles/cdt/336993.md)
+
+9-20 [新新默存｜一个以粪为美的时代](/articles/cdt/336994.md)
 
 9-20 [离散纪事｜“极端的民族主义，一定是与世界为敌。”](/articles/cdt/336996.md)
 
@@ -590,14 +600,4 @@
 8-16 [【404文库】“如此践踏人伦丧尽天良之事，仅仅已经查明的，就发生了超过4000起”（外二篇）](/articles/cdt/337940.md)
 
 8-15 [蔡照明透视｜张教授如何评价洞庭湖决口？](/articles/cdt/337942.md)
-
-8-15 [那些原本是废话的常识｜一个地方宜居与否，老天给了什么不重要，重要的是人](/articles/cdt/337945.md)
-
-8-15 [黑噪音｜养老金，将于2035年耗尽](/articles/cdt/337947.md)
-
-8-15 [每日一语 2024.8.14](/articles/cdt/337951.md)
-
-8-15 [岭南酷儿Lingnan queer｜无法挣脱的暗网：性少数扭转“治疗”](/articles/cdt/337971.md)
-
-8-15 [星球商业评论｜富士康来都来了](/articles/cdt/337973.md)
 
