--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+9-20 [真主党通讯设备爆炸 民用技术产品供应链“武器化”，我们需要多大程度担忧？](/articles/voa/1012440.md)
+
 9-20 [欧盟推迟对华电动汽车关税表决 欧中关税战前景不明](/articles/voa/1012441.md)
 
 9-20 [十余名共和党参议员推出与中国竞争的“实质性”法案](/articles/voa/1012442.md)
@@ -598,6 +600,4 @@
 9-9 [俄乌相互指责对方空袭边境地区，俄军称继续向乌东波克罗夫斯克推进](/articles/voa/1012738.md)
 
 9-8 [委内瑞拉反对党领导人获西班牙庇护后搭机前往马德里](/articles/voa/1012739.md)
-
-9-8 [继锗和镓后，中国限制稀有战略金属锑的出口，美国会被“报复”到吗？](/articles/voa/1012740.md)
 
