--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+9-20 [黎巴嫩寻呼机袭击事件源头调查扩大至保加利亚和挪威](/articles/voa/1012437.md)
+
+9-20 [台湾调查与黎巴嫩爆炸案有关的寻呼机公司负责人](/articles/voa/1012438.md)
+
 9-20 [真主党通讯设备爆炸：以色列被指幕后主导，地区紧张局势升级](/articles/voa/1012439.md)
 
 9-20 [真主党通讯设备爆炸 民用技术产品供应链“武器化”，我们需要多大程度担忧？](/articles/voa/1012440.md)
@@ -596,8 +600,4 @@
 9-9 [巴基斯坦反对派大规模集会，要求释放前总理汗](/articles/voa/1012735.md)
 
 9-9 [中国计划在一些地区允许设立外商独资医院](/articles/voa/1012736.md)
-
-9-9 [内塔尼亚胡在战争进入第12个月之际誓言继续打击哈马斯](/articles/voa/1012737.md)
-
-9-9 [俄乌相互指责对方空袭边境地区，俄军称继续向乌东波克罗夫斯克推进](/articles/voa/1012738.md)
 
