--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+9-20 [我从中国被领养，至今仍在寻找自我和归属](/articles/nyt/1042371.md)
+
 9-20 [中国汽车制造商如何应对欧盟关税？在欧洲造车](/articles/nyt/1042372.md)
 
 9-20 [位于中美科技战核心的芯片制造商：中芯国际](/articles/nyt/1042373.md)
@@ -598,6 +600,4 @@
 6-18 [中菲船只在南海相撞，两国相互指责](/articles/nyt/1042669.md)
 
 6-18 [“不恐慌、不麻木”：美国在台协会处长给台湾的临别赠言](/articles/nyt/1042670.md)
-
-6-18 [报复性调查？中国威胁对欧洲进口猪肉征收关税](/articles/nyt/1042671.md)
 
