--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+9-20 [巴西最高法警告马斯克：违规将遭重罚](/articles/dw/1024251.md)
+
 9-20 [開放兩岸同婚 台灣：兼顧國家安全](/articles/dw/1024252.md)
 
 9-19 [德国拟向乌克兰追加4亿欧元军事援助](/articles/dw/1024253.md)
@@ -598,6 +600,4 @@
 8-19 [泽连斯基称正在库尔斯克“实现目标” 莫迪本周访问基辅](/articles/dw/1024549.md)
 
 8-19 [伊朗寻求中国侦察卫星技术 西方高度担忧](/articles/dw/1024550.md)
-
-8-19 [电动车恐惧症蔓延韩国 中国制造电池受关注](/articles/dw/1024551.md)
 
