--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+9-20 [汉莎考虑停飞法兰克福北京航线 决定10月作出](/articles/dw/1024249.md)
+
+9-20 [中国宣布将逐步恢复日本水产品进口](/articles/dw/1024250.md)
+
 9-20 [巴西最高法警告马斯克：违规将遭重罚](/articles/dw/1024251.md)
 
 9-20 [開放兩岸同婚 台灣：兼顧國家安全](/articles/dw/1024252.md)
@@ -596,8 +600,4 @@
 8-20 [中梵续约时限再至 北京有建交与否主动权?](/articles/dw/1024547.md)
 
 8-19 [打造“命运共同体”  中越共产党领导人举行会晤](/articles/dw/1024548.md)
-
-8-19 [泽连斯基称正在库尔斯克“实现目标” 莫迪本周访问基辅](/articles/dw/1024549.md)
-
-8-19 [伊朗寻求中国侦察卫星技术 西方高度担忧](/articles/dw/1024550.md)
 
