--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,12 @@
 德国之声
 ------
 
+9-20 [路透社：习近平主席应该向美联储主席鲍威尔致以诚挚谢意](/articles/dw/1024246.md)
+
+9-20 [媒体：大众新疆工厂人权报告存在严重瑕疵](/articles/dw/1024247.md)
+
+9-20 [俄乌交换战俘 206人获释](/articles/dw/1024248.md)
+
 9-20 [汉莎考虑停飞法兰克福北京航线 决定10月作出](/articles/dw/1024249.md)
 
 9-20 [中国宣布将逐步恢复日本水产品进口](/articles/dw/1024250.md)
@@ -594,10 +600,4 @@
 8-20 [香港新闻自由指数：记者评分创新低](/articles/dw/1024544.md)
 
 8-20 [习近平、苏林会晤签了哪些协议？](/articles/dw/1024545.md)
-
-8-20 [中越领导人会晤签了哪些协议？](/articles/dw/1024546.md)
-
-8-20 [中梵续约时限再至 北京有建交与否主动权?](/articles/dw/1024547.md)
-
-8-19 [打造“命运共同体”  中越共产党领导人举行会晤](/articles/dw/1024548.md)
 
