--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+9-20 [香港新煽动罪作出首两例判决](/articles/dw/1024245.md)
+
 9-20 [路透社：习近平主席应该向美联储主席鲍威尔致以诚挚谢意](/articles/dw/1024246.md)
 
 9-20 [媒体：大众新疆工厂人权报告存在严重瑕疵](/articles/dw/1024247.md)
@@ -598,6 +600,4 @@
 8-20 [客座评论：中国鼓励伊朗报复以色列？](/articles/dw/1024543.md)
 
 8-20 [香港新闻自由指数：记者评分创新低](/articles/dw/1024544.md)
-
-8-20 [习近平、苏林会晤签了哪些协议？](/articles/dw/1024545.md)
 
