--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+9-20 [日外相：将就日本男童遇袭身亡一事派副外相访华](/articles/dw/1024242.md)
+
+9-20 [冯德莱恩第八次访问基辅 许诺350亿欧元贷款](/articles/dw/1024243.md)
+
 9-20 [冯德莱恩第八次访问基辅](/articles/dw/1024244.md)
 
 9-20 [香港新煽动罪作出首两例判决](/articles/dw/1024245.md)
@@ -596,8 +600,4 @@
 8-20 [舌尖上的美食之被遗忘的东德美食](/articles/dw/1024540.md)
 
 8-20 [应对人口老化危机 中国加码投资社保基金](/articles/dw/1024541.md)
-
-8-20 [中国高科技公司如何在欧洲开展院外游说？](/articles/dw/1024542.md)
-
-8-20 [客座评论：中国鼓励伊朗报复以色列？](/articles/dw/1024543.md)
 
