--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+9-20 [阿姆斯特丹被游客挤爆 怎么办？](/articles/dw/1024241.md)
+
 9-20 [日外相：将就日本男童遇袭身亡一事派副外相访华](/articles/dw/1024242.md)
 
 9-20 [冯德莱恩第八次访问基辅 许诺350亿欧元贷款](/articles/dw/1024243.md)
@@ -598,6 +600,4 @@
 8-20 [台積電德國廠動土 文化差異將如何克服？](/articles/dw/1024539.md)
 
 8-20 [舌尖上的美食之被遗忘的东德美食](/articles/dw/1024540.md)
-
-8-20 [应对人口老化危机 中国加码投资社保基金](/articles/dw/1024541.md)
 
