--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+9-21 [台湾废除死刑运动受挫 大法官：死刑有条件合宪](/articles/voa/1012426.md)
+
 9-20 [日本男孩遇刺身亡震撼日本社区，部分在华日企考虑让员工及家属回国](/articles/voa/1012427.md)
 
 9-20 [南中国海紧张局势升温，拜登主持四国集团领导人峰会讨论海上安全问题](/articles/voa/1012428.md)
@@ -598,6 +600,4 @@
 9-9 [防范“敏感人士”踏足香港 港府筛查航班旅客可拒登机](/articles/voa/1012724.md)
 
 9-9 [中国外交官介入习近平访美暴力事件 亲历者洛杉矶抗议并讲述其中遭遇](/articles/voa/1012725.md)
-
-9-9 [媒体称德国海军舰艇编队本月中将过航台湾海峡，北京当局对此表达不满](/articles/voa/1012726.md)
 
