--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -31,6 +31,8 @@
 
 9-20 [【404文库】建设性意见｜建议权威部门尽快出台《仇恨指南》](/articles/cdt/337006.md)
 
+9-21 [【CDT关注】德国之声｜美国牧师林大卫在华遭囚18年后终获释](/articles/cdt/337011.md)
+
 9-19 [【404文库】打冷｜他杀死的，是深圳人的孩子](/articles/cdt/337013.md)
 
 9-19 [【404文库】星球商业评论｜十岁男孩倒在蛇口街头](/articles/cdt/337015.md)
@@ -598,6 +600,4 @@
 8-16 [闻道不分朝夕｜P图是如何为政治服务的](/articles/cdt/337936.md)
 
 8-16 [【404文库】“如此践踏人伦丧尽天良之事，仅仅已经查明的，就发生了超过4000起”（外二篇）](/articles/cdt/337940.md)
-
-8-15 [蔡照明透视｜张教授如何评价洞庭湖决口？](/articles/cdt/337942.md)
 
