--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+9-21 [公民记者张展的律师和母亲遭警方非法羁押，人权人士担忧她或成为下一个高智晟](/articles/voa/1012422.md)
+
+9-21 [香港宜家被指因国安法下架智能产品 港人叹东方之珠已不如中国二线城市](/articles/voa/1012423.md)
+
 9-21 [菲律宾知名议员呼吁中国采取更多行动打击网络犯罪团伙](/articles/voa/1012424.md)
 
 9-21 [泽连斯基：乌克兰“胜利计划”取决于盟友的快速决定](/articles/voa/1012425.md)
@@ -596,8 +600,4 @@
 9-9 [中国宣扬“飞虎精神”向美示好”？ 观察人士：两强相斗难止歇](/articles/voa/1012720.md)
 
 9-9 [消费信心仍疲软，中国八月份乘用车零售量连续五个月下跌](/articles/voa/1012721.md)
-
-9-9 [联合国人权事务高级专员：加沙停火“刻不容缓”](/articles/voa/1012722.md)
-
-9-9 [香港知名会计行被投诉非法协助港府清盘壹传媒](/articles/voa/1012723.md)
 
