--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+9-21 [以色列调查士兵从约旦河西岸屋顶抛尸体事件](/articles/voa/1012421.md)
+
 9-21 [公民记者张展的律师和母亲遭警方非法羁押，人权人士担忧她或成为下一个高智晟](/articles/voa/1012422.md)
 
 9-21 [香港宜家被指因国安法下架智能产品 港人叹东方之珠已不如中国二线城市](/articles/voa/1012423.md)
@@ -598,6 +600,4 @@
 9-10 [AI需求助阵，台湾八月出口再创新高 对美出口也再破纪录](/articles/voa/1012719.md)
 
 9-9 [中国宣扬“飞虎精神”向美示好”？ 观察人士：两强相斗难止歇](/articles/voa/1012720.md)
-
-9-9 [消费信心仍疲软，中国八月份乘用车零售量连续五个月下跌](/articles/voa/1012721.md)
 
