--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+9-21 [美两党议员示警中国利用法律战打压国外学者](/articles/voa/1012418.md)
+
 9-21 [以色列和黎巴嫩发生激烈的跨境火箭弹对射](/articles/voa/1012419.md)
 
 9-21 [欧盟公布计划，利用被冻结的俄罗斯资产为乌克兰提供390亿美元贷款](/articles/voa/1012420.md)
@@ -598,6 +600,4 @@
 9-10 [美国国会复会进入“中国周” 众院本周将表决多项中国相关法案](/articles/voa/1012716.md)
 
 9-10 [台湾联合国协进会赴美 吁联大讨论“2758号决议”的“一中”问题](/articles/voa/1012717.md)
-
-9-10 [路透调查：中国八月份出口受全球需求疲软及关税影响进一步减缓](/articles/voa/1012718.md)
 
