--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+9-21 [真主党高级指挥官在以色列对贝鲁特的袭击中丧生](/articles/voa/1012409.md)
+
 9-21 [澳大利亚总理：相信“未来任何一届美国政府”都将支持AUKUS](/articles/voa/1012410.md)
 
 9-21 [任内最后一次国际峰会：拜登在家中接待四方安全对话领导人](/articles/voa/1012411.md)
@@ -598,6 +600,4 @@
 9-10 [美国会“中国周”审议《生物安全法案》：速览几大要点](/articles/voa/1012707.md)
 
 9-10 [联合国表示愿意监督最终可能达成的加沙停火](/articles/voa/1012708.md)
-
-9-10 [中国宣布本月将与俄罗斯进行海空联合演习](/articles/voa/1012709.md)
 
