--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+9-21 [每日一语 2024.9.20](/articles/cdt/336958.md)
+
 9-21 [【404文库】念个咒语会下雨｜十岁日本男孩被害的背后：快手上278个视频呼吁“拆除日本学校”，点赞量超两百万](/articles/cdt/336960.md)
 
 9-21 [仇恨之下，无人生还｜hayami’s blog](/articles/cdt/336962.md)
@@ -598,6 +600,4 @@
 8-16 [极昼工作室｜19岁大学生兼职骑手，消失在外墙砖下](/articles/cdt/337927.md)
 
 8-16 [独角鲸工作坊｜离婚，越来越难了](/articles/cdt/337928.md)
-
-8-16 [人物杂志｜一个县的教育反内卷实验](/articles/cdt/337929.md)
 
