--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,12 @@
 美国之音
 ------
 
+9-21 [日本中部降下“前所未有”的暴雨 震灾后的能登地区多处遭大水淹没](/articles/voa/1012403.md)
+
+9-21 [被印度尼西亚叛军囚禁19个月后，新西兰籍机师获释](/articles/voa/1012404.md)
+
+9-21 [四方安全对话峰会周六登场 将就南中国海与朝鲜发表措辞强硬的联合声明](/articles/voa/1012405.md)
+
 9-21 [美国即将向台湾提供更大规模的安全援助](/articles/voa/1012406.md)
 
 9-21 [非法入境朝鲜的美国士兵被判处一年监禁后 现已被释放](/articles/voa/1012407.md)
@@ -594,10 +600,4 @@
 9-10 [金正恩在朝鲜建国纪念日誓言 将呈“几何级数”增加核武](/articles/voa/1012701.md)
 
 9-10 [联合国可能于下星期表决 要求以色列结束占领巴勒斯坦领土](/articles/voa/1012702.md)
-
-9-10 [美国众议院投票禁止大疆新无人机](/articles/voa/1012703.md)
-
-9-10 [在尹锡悦上台以后，要求韩国拥有核武的呼声“正常化了”](/articles/voa/1012704.md)
-
-9-10 [桑切斯在北京会晤习近平，寻求缓解欧中贸易纠纷](/articles/voa/1012705.md)
 
