--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+9-21 [阜成门六号院｜社会暴力，从卞仲耘到深圳日本学校小男孩的死](/articles/cdt/336946.md)
+
 9-21 [【404文库】水瓶纪元｜从深圳到东京：他们为那个孩子守夜](/articles/cdt/336956.md)
 
 9-21 [每日一语 2024.9.20](/articles/cdt/336958.md)
@@ -598,6 +600,4 @@
 8-17 [每日一语 2024.8.16](/articles/cdt/337922.md)
 
 8-17 [【网络民议】民政部：婚姻登记新草案“离婚冷静期内任何一方可申请撤回”，网友：你直接取消离婚得了](/articles/cdt/337923.md)
-
-8-16 [极昼工作室｜19岁大学生兼职骑手，消失在外墙砖下](/articles/cdt/337927.md)
 
