--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,10 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+9-21 [史料搬运工｜赵正的阅读量，以及仇恨教育](/articles/cdt/336935.md)
+
+9-21 [常识流通处｜一些人，需要提升“含人量”](/articles/cdt/336937.md)
+
 9-21 [阜成门六号院｜社会暴力，从卞仲耘到深圳日本学校小男孩的死](/articles/cdt/336946.md)
 
 9-21 [【404文库】水瓶纪元｜从深圳到东京：他们为那个孩子守夜](/articles/cdt/336956.md)
@@ -596,8 +600,4 @@
 8-17 [【404文库】卖杏花｜所以，连运动员都不能批评了？](/articles/cdt/337912.md)
 
 8-17 [每日一语 2024.8.15](/articles/cdt/337919.md)
-
-8-17 [每日一语 2024.8.16](/articles/cdt/337922.md)
-
-8-17 [【网络民议】民政部：婚姻登记新草案“离婚冷静期内任何一方可申请撤回”，网友：你直接取消离婚得了](/articles/cdt/337923.md)
 
