--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -7,6 +7,8 @@
 
 9-21 [常识流通处｜一些人，需要提升“含人量”](/articles/cdt/336937.md)
 
+9-21 [维权网｜张展被控“寻衅滋事”遭刑事拘留，母亲同时失联](/articles/cdt/336945.md)
+
 9-21 [阜成门六号院｜社会暴力，从卞仲耘到深圳日本学校小男孩的死](/articles/cdt/336946.md)
 
 9-21 [【404文库】水瓶纪元｜从深圳到东京：他们为那个孩子守夜](/articles/cdt/336956.md)
@@ -598,6 +600,4 @@
 8-17 [【404文库】【立此存照】厦门大学｜尽快启动台湾接管准备](/articles/cdt/337910.md)
 
 8-17 [【404文库】卖杏花｜所以，连运动员都不能批评了？](/articles/cdt/337912.md)
-
-8-17 [每日一语 2024.8.15](/articles/cdt/337919.md)
 
