--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+9-21 [中俄在日本海联合军演 加强军事合作](/articles/dw/1024234.md)
+
 9-21 [拜登敞开家门迎四方领导人 深化印太合作](/articles/dw/1024235.md)
 
 9-21 [真主党传呼机对讲机爆炸事件揭示亚洲供应链调查死角](/articles/dw/1024236.md)
@@ -598,6 +600,4 @@
 8-21 [美調整威懾戰略 首度聚焦中國核武擴張](/articles/dw/1024532.md)
 
 8-21 [台積電德國廠動土 如何克服文化差異？](/articles/dw/1024533.md)
-
-8-20 [中国制造特斯拉获得欧盟较低税率](/articles/dw/1024534.md)
 
