--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+9-22 [特拉华四方安全对话峰会将发表新的安全倡议回应中国挑战](/articles/voa/1012398.md)
+
 9-21 [九国联名呼吁联合国秘书长接纳台湾，台外交部表示感谢](/articles/voa/1012399.md)
 
 9-21 [无视西方指责，伊朗举行阅兵展示新型无人机和导弹](/articles/voa/1012400.md)
@@ -598,6 +600,4 @@
 9-10 [国事光析：“中国式现代化”：权贵的馅饼，百姓的陷阱](/articles/voa/1012696.md)
 
 9-10 [中国邀台湾网红赴新疆“说好中国故事” 专家:台湾年轻人没兴趣](/articles/voa/1012697.md)
-
-9-10 [中国对43名涉赌博、假球的足球运动员实施终身禁赛](/articles/voa/1012698.md)
 
