--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -5,6 +5,8 @@
 
 9-22 [每日一语 2024.9.21](/articles/cdt/336918.md)
 
+9-22 [特正经的张某某｜中国教育的精深细密：从发型，到厕所，到书包](/articles/cdt/336921.md)
+
 9-22 [读宋史的赵大胖｜ 正常人不要痴迷于“我发现了一个恐怖的大阴谋”](/articles/cdt/336922.md)
 
 9-22 [玖奌杂货店｜祝你平安](/articles/cdt/336925.md)
@@ -598,6 +600,4 @@
 8-18 [艾大荀｜看到金牌，也看到人们羞于谈起的背面](/articles/cdt/337885.md)
 
 8-18 [三月暴雨至｜结婚不需户口本，离婚还要冷静期？几十年前的婚姻法可不是这样](/articles/cdt/337887.md)
-
-8-19 [【CDT周报】第183期：当外卖骑手被压迫时，结果并不总是下跪](/articles/cdt/337888.md)
 
