--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+9-22 [黎巴嫩卫生部：以色列空袭贝鲁特的死亡人数上升到37人](/articles/voa/1012393.md)
+
 9-22 [拜登总统和日本首相岸田文雄讨论对南中国海问题的共同担忧](/articles/voa/1012394.md)
 
 9-22 [据媒体报道，俄罗斯和中国开始在日本海举行海军演习](/articles/voa/1012395.md)
@@ -598,6 +600,4 @@
 9-11 [俄罗斯人口危机恶化，六月出生人数不足十万 创25年来最低](/articles/voa/1012691.md)
 
 9-11 [200多港人出席彭定康生日会 前港督指英国要对移英港人尽量慷慨](/articles/voa/1012692.md)
-
-9-10 [乌克兰对莫斯科及周边发动迄今最大规模无人机袭击](/articles/voa/1012693.md)
 
