--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+9-22 [拜登对四方安全对话领导人表示：中国正在“测试”我们](/articles/voa/1012390.md)
+
 9-22 [路透：美国拟议禁止联网汽车使用中国软硬件](/articles/voa/1012391.md)
 
 9-22 [深圳日本男童遇袭加剧日中关系紧张：在华日本人社群恐慌 日企或撤离加速](/articles/voa/1012392.md)
@@ -598,6 +600,4 @@
 9-11 [美众院通过法案 要求撤销香港驻美经贸办特权](/articles/voa/1012688.md)
 
 9-11 [美国印太司令警告北京不要在南中国海采取“危险行动”](/articles/voa/1012689.md)
-
-9-11 [特朗普、哈里斯首场辩论将重塑美国大选选情，美国之音同步转播传译](/articles/voa/1012690.md)
 
