--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+9-22 [马克思主义倾向的候选人在斯里兰卡总统选举中遥遥领先](/articles/voa/1012388.md)
+
+9-22 [以色列突袭并下令关闭位于约旦河西岸的半岛电视台办公室45天](/articles/voa/1012389.md)
+
 9-22 [拜登对四方安全对话领导人表示：中国正在“测试”我们](/articles/voa/1012390.md)
 
 9-22 [路透：美国拟议禁止联网汽车使用中国软硬件](/articles/voa/1012391.md)
@@ -596,8 +600,4 @@
 9-11 [加拿大释放将对中国科技产品和关键矿物进一步加征关税的信号](/articles/voa/1012686.md)
 
 9-11 [巴勒斯坦官员说，以色列攻击人道躲避地区打死至少19 人](/articles/voa/1012687.md)
-
-9-11 [美众院通过法案 要求撤销香港驻美经贸办特权](/articles/voa/1012688.md)
-
-9-11 [美国印太司令警告北京不要在南中国海采取“危险行动”](/articles/voa/1012689.md)
 
