--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+9-22 [法国新政府宣布向右转](/articles/dw/1024227.md)
+
 9-22 [韩国：非婚生子女家庭越来越多](/articles/dw/1024228.md)
 
 9-22 [中国Gen Z新贵的奢侈时尚新风](/articles/dw/1024229.md)
@@ -598,6 +600,4 @@
 8-21 [布鲁塞尔与北京之间的贸易争端进一步升级](/articles/dw/1024525.md)
 
 8-21 [中国电子游戏《黑神话：悟空》言论审查惹恼海外玩家](/articles/dw/1024526.md)
-
-8-21 [以军在加沙地带发现六名人质遗体](/articles/dw/1024527.md)
 
