--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+9-22 [伊朗一处煤矿因甲烷泄漏引发爆炸 已有51人死亡](/articles/voa/1012386.md)
+
+9-22 [日本男孩遇刺身亡 中国社交媒体封禁反日账号](/articles/voa/1012387.md)
+
 9-22 [马克思主义倾向的候选人在斯里兰卡总统选举中遥遥领先](/articles/voa/1012388.md)
 
 9-22 [以色列突袭并下令关闭位于约旦河西岸的半岛电视台办公室45天](/articles/voa/1012389.md)
@@ -596,8 +600,4 @@
 9-11 [布林肯访英期间宣布因伊朗向俄提供弹道导弹而对其实施新制裁，并批评中国支持普京侵乌](/articles/voa/1012684.md)
 
 9-11 [布林肯和拉米在美英对话中强调台海现状的重要性](/articles/voa/1012685.md)
-
-9-11 [加拿大释放将对中国科技产品和关键矿物进一步加征关税的信号](/articles/voa/1012686.md)
-
-9-11 [巴勒斯坦官员说，以色列攻击人道躲避地区打死至少19 人](/articles/voa/1012687.md)
 
