--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+9-22 [报复以军空袭 真主党向以色列发射火箭弹](/articles/dw/1024226.md)
+
 9-22 [法国新政府宣布向右转](/articles/dw/1024227.md)
 
 9-22 [韩国：非婚生子女家庭越来越多](/articles/dw/1024228.md)
@@ -598,6 +600,4 @@
 8-22 [六四政治犯遭指中國特務 唐元雋是誰？](/articles/dw/1024524.md)
 
 8-21 [布鲁塞尔与北京之间的贸易争端进一步升级](/articles/dw/1024525.md)
-
-8-21 [中国电子游戏《黑神话：悟空》言论审查惹恼海外玩家](/articles/dw/1024526.md)
 
