--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+9-22 [美中合作办大学风险何在？](/articles/voa/1012384.md)
+
+9-22 [大选临近，两党竞争激烈，美国普通人选择公开场合不谈政治](/articles/voa/1012385.md)
+
 9-22 [伊朗一处煤矿因甲烷泄漏引发爆炸 已有51人死亡](/articles/voa/1012386.md)
 
 9-22 [日本男孩遇刺身亡 中国社交媒体封禁反日账号](/articles/voa/1012387.md)
@@ -596,8 +600,4 @@
 9-11 [美众议院通过法案 禁止国土安全部资助与孔子学院等中国实体有关系的高校](/articles/voa/1012682.md)
 
 9-11 [意大利外长：西巴尔干国家的欧盟梦想若破裂，中俄会趁虚而入](/articles/voa/1012683.md)
-
-9-11 [布林肯访英期间宣布因伊朗向俄提供弹道导弹而对其实施新制裁，并批评中国支持普京侵乌](/articles/voa/1012684.md)
-
-9-11 [布林肯和拉米在美英对话中强调台海现状的重要性](/articles/voa/1012685.md)
 
