--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+9-22 [未关麦被直播 拜登称中国在“考验”我们](/articles/dw/1024224.md)
+
+9-22 [未关麦克被直播 拜登称中国在“考验”我们](/articles/dw/1024225.md)
+
 9-22 [报复以军空袭 真主党向以色列发射火箭弹](/articles/dw/1024226.md)
 
 9-22 [法国新政府宣布向右转](/articles/dw/1024227.md)
@@ -596,8 +600,4 @@
 8-22 [欧洲军工业依赖中国产硝化棉的困境](/articles/dw/1024522.md)
 
 8-22 [争取到美国阿拉伯裔选民的支持 贺锦丽能做到吗？](/articles/dw/1024523.md)
-
-8-22 [六四政治犯遭指中國特務 唐元雋是誰？](/articles/dw/1024524.md)
-
-8-21 [布鲁塞尔与北京之间的贸易争端进一步升级](/articles/dw/1024525.md)
 
