--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+9-23 [愤怒的法国干邑生产商对中国关税威胁表示担忧](/articles/voa/1012378.md)
+
 9-23 [四方安全对话领导人在峰会上打造“自由与安全的”印太](/articles/voa/1012379.md)
 
 9-23 [俄军制导炸弹击中哈尔科夫市一高层公寓楼，导致21人受伤](/articles/voa/1012380.md)
@@ -598,6 +600,4 @@
 9-11 [哈里斯和特朗普在可能是唯一一场总统大选辩论中唇枪舌剑](/articles/voa/1012676.md)
 
 9-11 [台湾空军幻影战斗机实施夜间训练时坠毁 飞行员已获救](/articles/voa/1012677.md)
-
-9-11 [2024香山论坛看什么？北京借机抨击美国 邻国恐难以接受北京“说教”](/articles/voa/1012678.md)
 
