--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+9-23 [以色列的寻呼机攻击改变了世界](/articles/nyt/1042368.md)
+
 9-23 [中国将逐步解禁日本水产品进口](/articles/nyt/1042369.md)
 
 9-20 [如果中国不再努力拯救世界，会发生什么？](/articles/nyt/1042370.md)
@@ -598,6 +600,4 @@
 6-19 [中国南方暴雨引发洪灾，至少九人死亡](/articles/nyt/1042666.md)
 
 6-18 [为什么这些中国职业女性不想多生孩子](/articles/nyt/1042667.md)
-
-6-18 [普京将访问朝鲜，为俄乌战争寻求武器支持](/articles/nyt/1042668.md)
 
