--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -11,6 +11,8 @@
 
 9-23 [【404文库】深圳遇难日本男童父亲小山纯平：我唯一的愿望，是这样的悲剧不再重演](/articles/cdt/336906.md)
 
+9-23 [【CDT周报】第187期：这名深圳孩子的离世，正在摧毁刚筑起的高楼与常识](/articles/cdt/336912.md)
+
 9-22 [【CDT报告汇】连线中国：西藏数字监控登峰造极 远超新疆（外二篇）](/articles/cdt/336913.md)
 
 9-22 [每日一语 2024.9.21](/articles/cdt/336918.md)
@@ -598,6 +600,4 @@
 8-19 [【404文库】费里尼码字了｜南方小朱能不能批评南方小全](/articles/cdt/337872.md)
 
 8-19 [读宋史的赵大胖｜那个攻击奥运冠军的体育记者](/articles/cdt/337874.md)
-
-8-19 [风声OPINION｜为什么“结婚不用户口簿”触动人们的神经？](/articles/cdt/337876.md)
 
