--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+9-23 [以色列和真主党冲突继续升级，引发全面战争担忧](/articles/nyt/1042367.md)
+
 9-23 [以色列的寻呼机攻击改变了世界](/articles/nyt/1042368.md)
 
 9-23 [中国将逐步解禁日本水产品进口](/articles/nyt/1042369.md)
@@ -598,6 +600,4 @@
 6-19 [关于俄罗斯与朝鲜深化关系，你应该知道的](/articles/nyt/1042665.md)
 
 6-19 [中国南方暴雨引发洪灾，至少九人死亡](/articles/nyt/1042666.md)
-
-6-18 [为什么这些中国职业女性不想多生孩子](/articles/nyt/1042667.md)
 
