--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+9-23 [乌克兰总统访问宾州弹药厂 感谢工人并请求美国的更多援助](/articles/voa/1012375.md)
+
+9-23 [中国国安部称遭到台湾军方黑客组织的频繁攻击 台湾否认](/articles/voa/1012376.md)
+
 9-23 [预算协议避免可能的联邦政府关门，并为政府提供资金到12月](/articles/voa/1012377.md)
 
 9-23 [愤怒的法国干邑生产商对中国关税威胁表示担忧](/articles/voa/1012378.md)
@@ -596,8 +600,4 @@
 9-11 [应对快速人口老龄化 中国计划推动延迟退休改革](/articles/voa/1012673.md)
 
 9-11 [菲律宾大使：至少二十国计划举行峰会，寻求与中国“讲道理”的方法](/articles/voa/1012674.md)
-
-9-11 [中国欧盟商会:欧企怀疑中国是否有可信的经济复苏计划](/articles/voa/1012675.md)
-
-9-11 [哈里斯和特朗普在可能是唯一一场总统大选辩论中唇枪舌剑](/articles/voa/1012676.md)
 
