--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+9-23 [报告称美国联邦研究资金被用于推动中国军事技术](/articles/nyt/1042365.md)
+
 9-23 [两岁小猫在黄石公园走失，独自跋涉1300公里后平安回家](/articles/nyt/1042366.md)
 
 9-23 [以色列和真主党冲突继续升级，引发全面战争担忧](/articles/nyt/1042367.md)
@@ -598,6 +600,4 @@
 6-19 [热爱“组团”理财的韩国人：一起存钱一起花](/articles/nyt/1042663.md)
 
 6-19 [佩洛西随美国会代表团会见达赖喇嘛，北京予以谴责](/articles/nyt/1042664.md)
-
-6-19 [关于俄罗斯与朝鲜深化关系，你应该知道的](/articles/nyt/1042665.md)
 
