--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+9-23 [日本外相：将在美国纽约与中国外长王毅举行会谈](/articles/voa/1012371.md)
+
+9-23 [中国央行向银行注资 下调14天期逆回购利率至1.85%](/articles/voa/1012372.md)
+
 9-23 [以色列和真主党持续交火之际 伊朗伊斯兰革命卫队禁用通讯设备](/articles/voa/1012373.md)
 
 9-23 [哈里斯周三将发表新的经济提案 特朗普称若落败将不再参选](/articles/voa/1012374.md)
@@ -596,8 +600,4 @@
 9-11 [哈里斯和特朗普在总统辩论中针对中国问题展开激烈交锋](/articles/voa/1012669.md)
 
 9-11 [中国网民围观美国总统大选电视辩论 网民感叹：什么时候中国也来一场？](/articles/voa/1012670.md)
-
-9-11 [中国将审查有关“台独”举报的电邮 称绝不放过任何一个“台独”分子](/articles/voa/1012671.md)
-
-9-11 [西班牙首相称，欧盟应与中国搭桥沟通，避免贸易战](/articles/voa/1012672.md)
 
