--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,12 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+9-23 [法律圆桌｜我们能为死去的孩子做点什么？](/articles/cdt/336877.md)
+
+9-23 [古老板的老巢｜8月财政情况公布，到这个地步了，还不减支？](/articles/cdt/336878.md)
+
+9-23 [【404文库】师知说新｜公开发表“杀日本人”理论的黄如一是县长本人吗？](/articles/cdt/336880.md)
+
 9-23 [建设性意见｜那么多中国人在日本被杀，怎么就没人反思仇华思想？](/articles/cdt/336899.md)
 
 9-23 [每日一语 2024.9.22](/articles/cdt/336902.md)
@@ -594,10 +600,4 @@
 8-19 [镜心读书｜当朝廷失去了公信力](/articles/cdt/337860.md)
 
 8-19 [关胖本胖｜真相比“搞垮一个企业很容易”更劲爆](/articles/cdt/337863.md)
-
-8-19 [每日一语 2024.8.18](/articles/cdt/337869.md)
-
-8-19 [【404文库】费里尼码字了｜南方小朱能不能批评南方小全](/articles/cdt/337872.md)
-
-8-19 [读宋史的赵大胖｜那个攻击奥运冠军的体育记者](/articles/cdt/337874.md)
 
