--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+9-23 [研究:特朗普若当选 德国外贸将遭重创](/articles/dw/1024220.md)
+
 9-23 [德国选项党成为勃兰登堡州议会第二大党](/articles/dw/1024221.md)
 
 9-23 [以色列继续对真主党空袭 中国呼吁公民撤离以色列](/articles/dw/1024222.md)
@@ -598,6 +600,4 @@
 8-22 [台湾10名退役军官间谍案宣判 8人获刑 最高13年](/articles/dw/1024518.md)
 
 8-22 [美国高官在纽约会见达赖喇嘛](/articles/dw/1024519.md)
-
-8-22 [中国多家媒体撰文纪念邓小平诞辰120周年](/articles/dw/1024520.md)
 
