--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+9-23 [三联生活周刊｜公立医院为何难以买到“进口药”了？](/articles/cdt/336876.md)
+
 9-23 [法律圆桌｜我们能为死去的孩子做点什么？](/articles/cdt/336877.md)
 
 9-23 [古老板的老巢｜8月财政情况公布，到这个地步了，还不减支？](/articles/cdt/336878.md)
@@ -598,6 +600,4 @@
 8-19 [鹿人三千｜结婚不用户口簿是吧，那需要本人么？](/articles/cdt/337858.md)
 
 8-19 [镜心读书｜当朝廷失去了公信力](/articles/cdt/337860.md)
-
-8-19 [关胖本胖｜真相比“搞垮一个企业很容易”更劲爆](/articles/cdt/337863.md)
 
