--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+9-23 [聿文视界：湖南女厅官遇害，中国官场人人自危？](/articles/voa/1012370.md)
+
 9-23 [日本外相：将在美国纽约与中国外长王毅举行会谈](/articles/voa/1012371.md)
 
 9-23 [中国央行向银行注资 下调14天期逆回购利率至1.85%](/articles/voa/1012372.md)
@@ -598,6 +600,4 @@
 9-11 [中国持续为外国培训执法官员，输出极权维稳理念](/articles/voa/1012668.md)
 
 9-11 [哈里斯和特朗普在总统辩论中针对中国问题展开激烈交锋](/articles/voa/1012669.md)
-
-9-11 [中国网民围观美国总统大选电视辩论 网民感叹：什么时候中国也来一场？](/articles/voa/1012670.md)
 
