--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,14 @@
 美国之音
 ------
 
+9-24 [自民党总裁选举进入关键阶段：在日华人和台湾人如何看？](/articles/voa/1012361.md)
+
+9-24 [伊朗外长称准备好在纽约联大期间恢复核谈判：“如果其他各方也愿意的话”](/articles/voa/1012362.md)
+
+9-24 [俄国军机侵犯日本领空，日本战机首次发射照明弹警告](/articles/voa/1012363.md)
+
+9-24 [34项台农产品输中不再免税 台湾果农：另辟市场](/articles/voa/1012364.md)
+
 9-24 [信奉马克思主义的迪萨纳亚克宣誓就任斯里兰卡总统](/articles/voa/1012365.md)
 
 9-24 [中国钢铁全球泛滥，印度今年4至8月从中国成品钢进口创下7年来新高](/articles/voa/1012366.md)
@@ -592,12 +600,4 @@
 9-12 [全球首座刘晓波铜像落户爱尔兰高威大学 历经多方压力终获成功](/articles/voa/1012659.md)
 
 9-12 [澳洲智库报告：中国取代美国 在关键技术研究方面处于领先地位](/articles/voa/1012660.md)
-
-9-12 [23年后，美国纪念9/11恐怖袭击受害者](/articles/voa/1012661.md)
-
-9-12 [台湾幻影2000战机坠毁，军事专家：难敌中共空军 急需汰换](/articles/voa/1012662.md)
-
-9-12 [印度政府下令提高中国和越南某些钢铁产品关税12-30%，减缓其输入速度](/articles/voa/1012663.md)
-
-9-12 [华盛顿升级对北京的批评，首次指责中国直接强化俄罗斯战争机器](/articles/voa/1012664.md)
 
