--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+9-24 [联调局数据显示暴力犯罪连续第二年下降](/articles/voa/1012360.md)
+
 9-24 [自民党总裁选举进入关键阶段：在日华人和台湾人如何看？](/articles/voa/1012361.md)
 
 9-24 [伊朗外长称准备好在纽约联大期间恢复核谈判：“如果其他各方也愿意的话”](/articles/voa/1012362.md)
@@ -598,6 +600,4 @@
 9-12 [美国宣布将向乌克兰提供超过7亿美元的新援助](/articles/voa/1012658.md)
 
 9-12 [全球首座刘晓波铜像落户爱尔兰高威大学 历经多方压力终获成功](/articles/voa/1012659.md)
-
-9-12 [澳洲智库报告：中国取代美国 在关键技术研究方面处于领先地位](/articles/voa/1012660.md)
 
