--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -33,6 +33,8 @@
 
 9-22 [【CDT报告汇】连线中国：西藏数字监控登峰造极 远超新疆（外二篇）](/articles/cdt/336913.md)
 
+9-24 [【404文库】“是否还愿意继续开放？是否还珍惜人的生命、尊严和自由？”（外二篇）](/articles/cdt/336914.md)
+
 9-22 [每日一语 2024.9.21](/articles/cdt/336918.md)
 
 9-22 [特正经的张某某｜中国教育的精深细密：从发型，到厕所，到书包](/articles/cdt/336921.md)
@@ -598,6 +600,4 @@
 8-19 [常识流通处｜是谁杀死了那个出租公寓里的外地女孩？](/articles/cdt/337841.md)
 
 8-19 [冰川思享号｜有些地方的基建已经养不起了](/articles/cdt/337844.md)
-
-8-19 [观人随笔｜最近的新闻让我浮想联翩](/articles/cdt/337847.md)
 
