--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,12 @@
 美国之音
 ------
 
+9-24 [中国坚定支持黎巴嫩维护主权和安全 外长王毅谴责以色列大规模空袭](/articles/voa/1012338.md)
+
+9-24 [泽连斯基称：美国若果断行动，可能于明年结束与俄罗斯的战争](/articles/voa/1012339.md)
+
+9-24 [拜登即将发表任内最后一次联大演讲, 关注加沙和乌克兰并提及美国与中国的竞争](/articles/voa/1012340.md)
+
 9-24 [中国推出新的一揽子刺激计划 促进扩大消费和投资](/articles/voa/1012341.md)
 
 9-24 [新加坡罕见高官涉贪 前交通部长易华仁就收受礼物认罪](/articles/voa/1012342.md)
@@ -594,10 +600,4 @@
 9-13 [拜登将在特拉华州主办四方安全对话峰会](/articles/voa/1012636.md)
 
 9-13 [众院中共问题特设委员会与国土安全委员会公布调查报告，聚焦中国起重机对美港口的潜在威胁](/articles/voa/1012637.md)
-
-9-13 [在美维吾尔流亡者揭露中国当局的跨国镇压](/articles/voa/1012638.md)
-
-9-13 [台湾陆委会主委：面对中国压力，台湾永不屈服](/articles/voa/1012639.md)
-
-9-13 [日本自民党党魁角逐开始，九名议员参选，人数破纪录](/articles/voa/1012640.md)
 
