--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+9-24 [浣花溪杜甫｜苹果手机爆炸和特斯拉刹车失灵，造谣的套路很相似](/articles/cdt/336852.md)
+
 9-24 [低音 | 侯芷明：为何我们要重提伊力哈木・土赫提？——写在伊力哈木・土赫提被捕十周年](/articles/cdt/336856.md)
 
 9-23 [每日一语 2024.9.23](/articles/cdt/336861.md)
@@ -598,6 +600,4 @@
 8-20 [每日一语 2024.8.19](/articles/cdt/337837.md)
 
 8-22 [【网络民议】“公开，平等，竞争，择优”是基本准则？不如说“公开，背景，内定，择亲”是基本准则](/articles/cdt/337838.md)
-
-8-19 [常识流通处｜是谁杀死了那个出租公寓里的外地女孩？](/articles/cdt/337841.md)
 
