--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+9-24 [新加坡两艘新型潜艇服役，保卫海上航线畅通与安全](/articles/voa/1012335.md)
+
+9-24 [国际对高端技术产品需求旺盛，台湾8月出口超500亿美元，连续6个月正成长](/articles/voa/1012336.md)
+
 9-24 [国事光析：从“西方病”到“中国灾”：还说“中国式现代化”](/articles/voa/1012337.md)
 
 9-24 [中国坚定支持黎巴嫩维护主权和安全 外长王毅谴责以色列大规模空袭](/articles/voa/1012338.md)
@@ -596,8 +600,4 @@
 9-13 [美众院“中国周”通过法案限制电动汽车税收抵免，白宫表示反对](/articles/voa/1012633.md)
 
 9-13 [美国再次呼吁以色列保护人道主义场所](/articles/voa/1012634.md)
-
-9-13 [教材“含习量”飙升家长不满 “颜色革命”紧箍咒空前教师不安](/articles/voa/1012635.md)
-
-9-13 [拜登将在特拉华州主办四方安全对话峰会](/articles/voa/1012636.md)
 
