--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+9-24 [民调：亚太裔选民青睐哈里斯胜过特朗普](/articles/dw/1024207.md)
+
 9-24 [上海：一周内两度遭遇台风登陆](/articles/dw/1024208.md)
 
 9-24 [中国央行降息降准 欲拉动经济增长](/articles/dw/1024209.md)
@@ -598,6 +600,4 @@
 8-24 [德国索林根市发生持刀袭击案 疑犯仍在逃](/articles/dw/1024505.md)
 
 8-24 [德国索林根市发生持刀袭击案](/articles/dw/1024506.md)
-
-8-23 [白宫顾问沙利文下周访华 将谈台湾、南海、乌战](/articles/dw/1024507.md)
 
