--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,10 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+9-25 [每日一语 2024.9.24](/articles/cdt/336831.md)
+
+9-25 [基本常识｜是非洲兄弟把中国抬进了联合国吗？我在纽约查清楚了](/articles/cdt/336835.md)
+
 9-25 [雷叔说事｜罗翔真的解构辛亥革命了吗？](/articles/cdt/336839.md)
 
 9-24 [慕枫歌歌｜相信苹果手机爆炸的人，与相信照相机可以摄魂的人](/articles/cdt/336846.md)
@@ -596,8 +600,4 @@
 8-21 [亮见｜租屋里的女子，到底为何而死？](/articles/cdt/337808.md)
 
 8-21 [建设性意见｜打算去郑州旅游的朋友们注意了！](/articles/cdt/337810.md)
-
-8-20 [老牌恶棍｜美驻华使馆“造假”，他蠢还是我们蠢？](/articles/cdt/337817.md)
-
-8-20 [游民星空｜给《黑神话：悟空》打8分的IGN编辑：别骂我祖宗，太疯狂了！](/articles/cdt/337822.md)
 
