--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+9-25 [中国调查美国PVH集团，称其涉嫌“歧视”新疆产品](/articles/nyt/1042360.md)
+
 9-24 [从铁路到港口，中国欲加强亚洲贸易枢纽地位](/articles/nyt/1042361.md)
 
 9-24 [中国降准并下调存量房贷利率，试图提振经济](/articles/nyt/1042362.md)
@@ -598,6 +600,4 @@
 6-20 [普京为何访问越南，你应该知道的几件事](/articles/nyt/1042658.md)
 
 6-20 [俄朝签署安全协议，朝鲜半岛无核化努力成空？](/articles/nyt/1042659.md)
-
-6-20 [活宝罗根与弗兰科谈《刺杀金正恩》](/articles/nyt/1042660.md)
 
