--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,20 @@
 美国之音
 ------
 
+9-25 [中国要求缅甸族裔团体切断与被认为亲美的缅甸反对团体的关系](/articles/voa/1012313.md)
+
+9-25 [卡塔尔成为第一个加入美国免签证计划的海湾国家](/articles/voa/1012314.md)
+
+9-25 [美国情报官员：中国、伊朗和俄罗斯利用人工智能影响选民的能力“没有想象的那么可信”](/articles/voa/1012315.md)
+
+9-25 [报告：香港学者担心教授民主被视为煽动，忧虑被举报，不断自我审查](/articles/voa/1012316.md)
+
+9-25 [赖清德：主权不容侵略并吞，台湾绝不可能签和平协议](/articles/voa/1012317.md)
+
+9-25 [中国表示将因抵制新疆产品而调查时装公司PVH](/articles/voa/1012318.md)
+
+9-25 [世界各国领导人在联大讲话，中东与乌克兰冲突成为焦点](/articles/voa/1012319.md)
+
 9-25 [乌克兰：哈尔科夫和扎波罗热遭到俄罗斯致命攻击](/articles/voa/1012320.md)
 
 9-25 [加拿大官员：正在考虑禁止联网汽车使用中国技术](/articles/voa/1012321.md)
@@ -586,18 +600,4 @@
 9-13 [香港记协称几十名香港记者及部分家人遭到“爱国者”骚扰和恐吓](/articles/voa/1012611.md)
 
 9-13 [中俄联合演习与巡航变密集 分析：对抗美国西方意图明显](/articles/voa/1012612.md)
-
-9-13 [借特朗普遇刺，中国水军称赞特朗普期冀增加与美国人互动，以干扰大选](/articles/voa/1012613.md)
-
-9-13 [白宫即将对中国快时尚交易平台采取措施，堵住小额包裹逃税漏洞](/articles/voa/1012614.md)
-
-9-13 [路透独家：俄罗斯使用中国产航空发动机制造新型自杀式无人机](/articles/voa/1012615.md)
-
-9-13 [缅甸反政府武装逐步掌控中缅边境，中国援助军政府引发民众反弹](/articles/voa/1012616.md)
-
-9-13 [美众院密集通过抗中法案 中国恐无力反制](/articles/voa/1012617.md)
-
-9-13 [路透：美国政府敲定对中国产品的惩罚性关税，电动车加征100%，半导体50%](/articles/voa/1012618.md)
-
-9-13 [中国批准从2025年1月起提高退休年龄的计划](/articles/voa/1012619.md)
 
