--- a/articles/cdt/336835.md
+++ b/articles/cdt/336835.md
@@ -1,5 +1,5 @@
 <!--1727205713000-->
-[基本常识｜是非洲兄弟把中国抬进了联合国吗？我在纽约查清楚了](https://chinadigitaltimes.net/chinese/711740.html)
+[【404文库】基本常识｜是非洲兄弟把中国抬进了联合国吗？我在纽约查清楚了](https://chinadigitaltimes.net/chinese/711740.html)
 ------
 
 <blockquote><p>CDT编者按：原文章有一处超链接说明，其为中国外交部官方网站。为保护您的隐私安全，编者已将超链接移除。</p></blockquote><p>有一个广为流传并且被官方认可的说法：</p><p>是非洲兄弟把中国抬进了联合国。</p><p><img decoding="async" src="https://chinadigitaltimes.net/chinese/files/2024/09/post-711740-66f310656b110." alt="img"></p><p>这几天，联合国大会正在纽约召开，各国代表们就关乎人类发展的问题展开辩论与投票，正如1971年第26届联大会议表决要不要给中华人民共和国合法席位那样。我也在纽约，所以特地去凑个热闹（参观而非参会），顺便查一查那份2758号决议。</p><div style="width:42%;float:right;padding-left:20px"><div class="su-spoiler su-spoiler-style-fancy su-spoiler-icon-chevron-circle su-spoiler-closed" data-scroll-offset="0" data-anchor-in-url="no"><div class="su-spoiler-title" tabindex="0" role="button"><span class="su-spoiler-icon"></span>CDT 档案卡</div><div class="su-spoiler-content su-u-clearfix su-u-trim"><strong>标题：</strong>基本常识｜是非洲兄弟把中国抬进了联合国吗？我在纽约查清楚了<br><strong>作者：</strong><a href="https://chinadigitaltimes.net/space/基本常识" target="_blank">基本常识</a><br><strong>发表日期：</strong>2024.9.24<br><strong>来源：</strong><a href="https://web.archive.org/web/20240924174852/https://mp.weixin.qq.com/s/RrcZtOkpT2JueALZv4QQ-g" target="_blank">微信公众号“基本常识”</a><br><strong>主题归类：</strong><a href="https://chinadigitaltimes.net/space/中非合作论坛" target="_blank">中非合作论坛</a><br><strong>CDS收藏：</strong><a href="https://chinadigitaltimes.net/space/%E5%85%AC%E6%B0%91%E9%A6%86" target="_blank" rel="noopener">公民馆</a><br><strong>版权说明：</strong>该作品版权归原作者所有。中国数字时代仅对原作进行存档，以对抗中国的网络审查。<a href="https://chinadigitaltimes.net/chinese/copyright">详细版权说明</a>。</div></div></div><p><img decoding="async" src="https://chinadigitaltimes.net/chinese/files/2024/09/post-711740-66f3106588adf." alt="img"></p><p>批准中华人民共和国加入联合国的2758号决议原文就是这样，那时还是繁体字的时代（中文一直是联合国官方语言之一），短短半页纸的内容，却产生了极其深远的影响。</p><p>这份决议最初是由欧洲国家阿尔巴尼亚和非洲国家阿尔及利亚提交的联署议案，后经128个国家代表投票表决，以76票赞成，35票反对，17票弃权的结果涉险过关。说涉险过关，是因为76/(76+35)=68.5%，比通过议案所需的三分之二比例仅仅高出2个百分点。</p><p>那么，中国加入联合国这件事，是哪些国家在支持，哪些国家在反对呢？我仔细查阅了原始投票记录。</p><p><img decoding="async" src="https://chinadigitaltimes.net/chinese/files/2024/09/post-711740-66f31065a5a79." alt="img"></p><p>在当时参与投票的国家中，按洲来分类：</p><p>亚洲30国，赞成19票，反对4票，弃权7票，赞成率83%；</p><p>非洲42国，赞成26票，反对15票，弃权1票，赞成率63%；</p><p>欧洲共27国，赞成23票，反对1票，弃权3票，赞成率96%；</p><p>北美洲13国，赞成3票，反对8票，弃权2票，赞成率27%；</p><p>南美洲13国，赞成5票，反对5票，弃权3票，赞成率50%；</p><p>大洋洲3国，赞成0票，反对2票，弃权1票，赞成率0%。</p><p>拿67%的通过标准去对照一下，哪些洲帮了大忙，哪些洲拖了后腿，还是很明显的。</p><p>原始投票数据来源：<a href="https://digitallibrary.un.org/record/654350?ln=en" title="联合国官网">联合国官网</a></p><p>简而言之，主要是亚洲和欧洲的兄弟把中国抬进了联合国。</p><p>的确也有很多非洲兄弟帮忙抬了轿子，但是在将非洲作为一个整体来感谢的时候，还是有必要提一下那些投了反对票的国家，毕竟来自非洲国家的反对票是最多的。</p><p>投了反对票的15个非洲国家包括：</p><p>中非共和国、南非、乍得、刚果（金）、达荷美（现为贝宁）、加蓬、冈比亚、科特迪瓦、莱索托、利比里亚、马尔加什（现为马达加斯加）、马拉维、尼日尔、斯威士兰、上沃尔特（现为布基纳法索）。</p><p>我逐一核查过，上述15个国家中，除斯威士兰外，其他14个国家全部为2024年中非合作论坛的座上宾，都在外交部长感谢的“把中国抬进联合国的非洲兄弟”之列。</p><p>当然，也全都在600亿美元惠及范围之内。</p><p>信息来源：外交部官网中非合作论坛介绍<strong>【超链接已移除】</strong></p><p>中国人讲究知恩图报，这非常好。知恩图报的前提是知道恩人是谁，知道恩情有多重。要是把好的赖的都混在一起，投赞成票的和反对票的都混在一起，其实一定程度上也是抹杀了真情实意对吧？</p><p>真正把中国抬进联合国的是哪些兄弟，还是很有必要分清楚的。否则总会有某些国家明里暗里和中国对着干，但滥竽充数混在非洲兄弟的行列里吃援助，我们这些纳税人岂不是当冤大头。</p><p>分享一些基本常识：</p><p>国家不能一直活在历史账本里，我完全支持中国和当年投了反对票的国家建立友好关系，互惠互利合作。</p><p>只是一码归一码，尊重历史事实是个好习惯，希望大家都有。</p><div class="addtoany_share_save_container addtoany_content addtoany_content_bottom"><div class="a2a_kit a2a_kit_size_32 addtoany_list" data-a2a-url="https://chinadigitaltimes.net/chinese/711740.html" data-a2a-title="基本常识｜是非洲兄弟把中国抬进了联合国吗？我在纽约查清楚了"><a class="a2a_button_facebook" href="https://www.addtoany.com/add_to/facebook?linkurl=https%3A%2F%2Fchinadigitaltimes.net%2Fchinese%2F711740.html&amp;linkname=%E5%9F%BA%E6%9C%AC%E5%B8%B8%E8%AF%86%EF%BD%9C%E6%98%AF%E9%9D%9E%E6%B4%B2%E5%85%84%E5%BC%9F%E6%8A%8A%E4%B8%AD%E5%9B%BD%E6%8A%AC%E8%BF%9B%E4%BA%86%E8%81%94%E5%90%88%E5%9B%BD%E5%90%97%EF%BC%9F%E6%88%91%E5%9C%A8%E7%BA%BD%E7%BA%A6%E6%9F%A5%E6%B8%85%E6%A5%9A%E4%BA%86" title="Facebook" rel="nofollow noopener" target="_blank"></a><a class="a2a_button_twitter" href="https://www.addtoany.com/add_to/twitter?linkurl=https%3A%2F%2Fchinadigitaltimes.net%2Fchinese%2F711740.html&amp;linkname=%E5%9F%BA%E6%9C%AC%E5%B8%B8%E8%AF%86%EF%BD%9C%E6%98%AF%E9%9D%9E%E6%B4%B2%E5%85%84%E5%BC%9F%E6%8A%8A%E4%B8%AD%E5%9B%BD%E6%8A%AC%E8%BF%9B%E4%BA%86%E8%81%94%E5%90%88%E5%9B%BD%E5%90%97%EF%BC%9F%E6%88%91%E5%9C%A8%E7%BA%BD%E7%BA%A6%E6%9F%A5%E6%B8%85%E6%A5%9A%E4%BA%86" title="Twitter" rel="nofollow noopener" target="_blank"></a><a class="a2a_button_telegram" href="https://www.addtoany.com/add_to/telegram?linkurl=https%3A%2F%2Fchinadigitaltimes.net%2Fchinese%2F711740.html&amp;linkname=%E5%9F%BA%E6%9C%AC%E5%B8%B8%E8%AF%86%EF%BD%9C%E6%98%AF%E9%9D%9E%E6%B4%B2%E5%85%84%E5%BC%9F%E6%8A%8A%E4%B8%AD%E5%9B%BD%E6%8A%AC%E8%BF%9B%E4%BA%86%E8%81%94%E5%90%88%E5%9B%BD%E5%90%97%EF%BC%9F%E6%88%91%E5%9C%A8%E7%BA%BD%E7%BA%A6%E6%9F%A5%E6%B8%85%E6%A5%9A%E4%BA%86" title="Telegram" rel="nofollow noopener" target="_blank"></a><a class="a2a_button_reddit" href="https://www.addtoany.com/add_to/reddit?linkurl=https%3A%2F%2Fchinadigitaltimes.net%2Fchinese%2F711740.html&amp;linkname=%E5%9F%BA%E6%9C%AC%E5%B8%B8%E8%AF%86%EF%BD%9C%E6%98%AF%E9%9D%9E%E6%B4%B2%E5%85%84%E5%BC%9F%E6%8A%8A%E4%B8%AD%E5%9B%BD%E6%8A%AC%E8%BF%9B%E4%BA%86%E8%81%94%E5%90%88%E5%9B%BD%E5%90%97%EF%BC%9F%E6%88%91%E5%9C%A8%E7%BA%BD%E7%BA%A6%E6%9F%A5%E6%B8%85%E6%A5%9A%E4%BA%86" title="Reddit" rel="nofollow noopener" target="_blank"></a><a class="a2a_button_whatsapp" href="https://www.addtoany.com/add_to/whatsapp?linkurl=https%3A%2F%2Fchinadigitaltimes.net%2Fchinese%2F711740.html&amp;linkname=%E5%9F%BA%E6%9C%AC%E5%B8%B8%E8%AF%86%EF%BD%9C%E6%98%AF%E9%9D%9E%E6%B4%B2%E5%85%84%E5%BC%9F%E6%8A%8A%E4%B8%AD%E5%9B%BD%E6%8A%AC%E8%BF%9B%E4%BA%86%E8%81%94%E5%90%88%E5%9B%BD%E5%90%97%EF%BC%9F%E6%88%91%E5%9C%A8%E7%BA%BD%E7%BA%A6%E6%9F%A5%E6%B8%85%E6%A5%9A%E4%BA%86" title="WhatsApp" rel="nofollow noopener" target="_blank"></a><a class="a2a_button_email" href="https://www.addtoany.com/add_to/email?linkurl=https%3A%2F%2Fchinadigitaltimes.net%2Fchinese%2F711740.html&amp;linkname=%E5%9F%BA%E6%9C%AC%E5%B8%B8%E8%AF%86%EF%BD%9C%E6%98%AF%E9%9D%9E%E6%B4%B2%E5%85%84%E5%BC%9F%E6%8A%8A%E4%B8%AD%E5%9B%BD%E6%8A%AC%E8%BF%9B%E4%BA%86%E8%81%94%E5%90%88%E5%9B%BD%E5%90%97%EF%BC%9F%E6%88%91%E5%9C%A8%E7%BA%BD%E7%BA%A6%E6%9F%A5%E6%B8%85%E6%A5%9A%E4%BA%86" title="Email" rel="nofollow noopener" target="_blank"></a><a class="a2a_button_copy_link" href="https://www.addtoany.com/add_to/copy_link?linkurl=https%3A%2F%2Fchinadigitaltimes.net%2Fchinese%2F711740.html&amp;linkname=%E5%9F%BA%E6%9C%AC%E5%B8%B8%E8%AF%86%EF%BD%9C%E6%98%AF%E9%9D%9E%E6%B4%B2%E5%85%84%E5%BC%9F%E6%8A%8A%E4%B8%AD%E5%9B%BD%E6%8A%AC%E8%BF%9B%E4%BA%86%E8%81%94%E5%90%88%E5%9B%BD%E5%90%97%EF%BC%9F%E6%88%91%E5%9C%A8%E7%BA%BD%E7%BA%A6%E6%9F%A5%E6%B8%85%E6%A5%9A%E4%BA%86" title="Copy Link" rel="nofollow noopener" target="_blank"></a><a class="a2a_dd addtoany_share_save addtoany_share" href="https://www.addtoany.com/share"></a></div></div>
