--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+9-25 [拜登任内最后一次联大演讲：警告全球处于“拐点”](/articles/nyt/1042358.md)
+
 9-25 [中美电池竞赛，美国还有机会吗？](/articles/nyt/1042359.md)
 
 9-25 [中国调查美国PVH集团，称其涉嫌“歧视”新疆产品](/articles/nyt/1042360.md)
@@ -598,6 +600,4 @@
 6-21 [俄朝共同防御条约给北京带来更多麻烦](/articles/nyt/1042656.md)
 
 6-20 [乘飞机出行还安全吗？航空安全专家为你解答](/articles/nyt/1042657.md)
-
-6-20 [普京为何访问越南，你应该知道的几件事](/articles/nyt/1042658.md)
 
