--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+9-25 [中国向公海试射洲际弹道导弹 专家：强烈信号](/articles/dw/1024202.md)
+
 9-25 [亚洲实力指数：美国仍居首，中国军力在赶超](/articles/dw/1024203.md)
 
 9-25 [从亚洲走钢丝到欧洲](/articles/dw/1024204.md)
@@ -598,6 +600,4 @@
 8-24 [菲律宾指责中国对其巡逻机发射照明弹](/articles/dw/1024500.md)
 
 8-24 [朝鲜谴责美国最新核战略计划](/articles/dw/1024501.md)
-
-8-24 [法国南部犹太教堂外发生爆炸](/articles/dw/1024502.md)
 
