--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+9-25 [警方追求绩效与社群监控 脱北者在中国寸步难行](/articles/voa/1012306.md)
+
 9-25 [中国央行下调中期贷款利率，多数亚股续涨](/articles/voa/1012307.md)
 
 9-25 [中国军方罕见举动 首次公开洲际弹道导弹试射“落入太平洋”](/articles/voa/1012308.md)
@@ -598,6 +600,4 @@
 9-14 [泽连斯基：将向拜登提交他的和平计划](/articles/voa/1012604.md)
 
 9-14 [在地缘政治紧张和经济挑战下，中国在南亚资助的项目面临挫折](/articles/voa/1012605.md)
-
-9-14 [教宗方济各再次向中国示好，称北京是教会的“应许和希望”](/articles/voa/1012606.md)
 
