--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+9-25 [越共领导人苏林将会拜登：在美中之间平衡](/articles/dw/1024199.md)
+
 9-25 [黎巴嫩局势激化：以色列想要实现什么目标？](/articles/dw/1024200.md)
 
 9-25 [不止大众 欧洲车企普遍面临减产压力](/articles/dw/1024201.md)
@@ -598,6 +600,4 @@
 8-24 [Meta：伊朗黑客攻击拜登和特朗普工作人员WhatsApp账户](/articles/dw/1024497.md)
 
 8-24 [法国南部犹太教堂外发生爆炸 疑为恐怖袭击](/articles/dw/1024498.md)
-
-8-24 [德国索林根市持刀袭击案：警方逮捕一名嫌疑人](/articles/dw/1024499.md)
 
