--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+9-26 [路透：美国为泽连斯基访问准备了80亿美元的军援计划](/articles/voa/1012280.md)
+
 9-26 [拜登会见越南领导人苏林 抗衡中俄影响力](/articles/voa/1012281.md)
 
 9-26 [日本军舰首次穿越台湾海峡 协同澳大利亚、新西兰捍卫航行自由](/articles/voa/1012282.md)
@@ -598,6 +600,4 @@
 9-15 [缅甸军政府罕见请求外国援助 以应对台风“摩羯”带来的致命洪灾](/articles/voa/1012578.md)
 
 9-15 [俄乌经阿联酋斡旋交换206名战俘](/articles/voa/1012579.md)
-
-9-15 [苏丹城市被轰击，分析人士说爆发空前战斗](/articles/voa/1012580.md)
 
