--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+9-27 [前特朗普政府国安顾问：中国是美国史上前所未有的威胁](/articles/voa/1012257.md)
+
 9-27 [泽连斯基在被共和党人指控干预选举背景下会晤拜登和哈里斯，周五见特朗普](/articles/voa/1012258.md)
 
 9-27 [外国投资者欢迎中国经济刺激计划但保持观望距离](/articles/voa/1012259.md)
@@ -598,6 +600,4 @@
 9-16 [经济表现逊于预期 高盛、花旗、大摩调降中国增长预测](/articles/voa/1012555.md)
 
 9-16 [TikTok在美国的未来悬而未决 将取决于联邦法院裁决](/articles/voa/1012556.md)
-
-9-16 [“贝碧嘉”登陆上海 1949年以来袭沪最强台风](/articles/voa/1012557.md)
 
