--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+9-27 [Telegram如何成为犯罪分子和恐怖分子的游乐场](/articles/nyt/1042351.md)
+
 9-27 [香港《立场新闻》“煽动”案宣判，两名编辑获刑](/articles/nyt/1042352.md)
 
 9-26 [纽约市长亚当斯被起诉，详解案件调查时间线](/articles/nyt/1042353.md)
@@ -598,6 +600,4 @@
 6-24 [追寻我父亲的边疆：他在中共军队的岁月](/articles/nyt/1042649.md)
 
 6-24 [普京来亚洲“搞破坏“，他成功了](/articles/nyt/1042650.md)
-
-6-24 [中国欧盟将启动汽车关税磋商，避免贸易争端升级](/articles/nyt/1042651.md)
 
