--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+9-27 [中国央行降准以刺激贷款，沪港股劲扬](/articles/voa/1012255.md)
+
+9-27 [日本自民党将选出新总裁接替即将卸任的首相岸田文雄](/articles/voa/1012256.md)
+
 9-27 [前特朗普政府国安顾问：中国是美国史上前所未有的威胁](/articles/voa/1012257.md)
 
 9-27 [泽连斯基在被共和党人指控干预选举背景下会晤拜登和哈里斯，周五见特朗普](/articles/voa/1012258.md)
@@ -596,8 +600,4 @@
 9-16 [国际民主日洛杉矶异议人士集会要求中共停止迫害民主人士，称独裁者无资格代表中国](/articles/voa/1012553.md)
 
 9-16 [香港新国安法首例 诸启邦因穿着“煽动性”T恤而被定罪](/articles/voa/1012554.md)
-
-9-16 [经济表现逊于预期 高盛、花旗、大摩调降中国增长预测](/articles/voa/1012555.md)
-
-9-16 [TikTok在美国的未来悬而未决 将取决于联邦法院裁决](/articles/voa/1012556.md)
 
