--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+9-27 [澳大利亚财政部长访问北京 讨论贸易、投资和近期的刺激措施](/articles/voa/1012253.md)
+
 9-27 [美中外长将会晤，或讨论中企对俄罗斯供应无人机](/articles/voa/1012254.md)
 
 9-27 [中国央行降准以刺激贷款，沪港股劲扬](/articles/voa/1012255.md)
@@ -598,6 +600,4 @@
 9-16 [意大利外长面告中国商务部长：罗马支持欧盟加征中国产电动车反补贴关税](/articles/voa/1012551.md)
 
 9-16 [蒲黄榆说：砸锅卖铁、延长退休、苦力主义：北京踏入一个灰犀牛阵](/articles/voa/1012552.md)
-
-9-16 [国际民主日洛杉矶异议人士集会要求中共停止迫害民主人士，称独裁者无资格代表中国](/articles/voa/1012553.md)
 
