--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+9-27 [冰火两重天：中共放大招股市雄起，制造业颓势难以扭转](/articles/voa/1012247.md)
+
 9-27 [菲律宾再次顺利向第二托马斯浅滩坐滩军舰运送后勤补给](/articles/voa/1012248.md)
 
 9-27 [美海岸警卫队司令：中俄海军在阿拉斯加活动增加，美军用存在对付存在](/articles/voa/1012249.md)
@@ -598,6 +600,4 @@
 9-17 [特朗普二度躲过暗杀，中国网民热议臆测四起](/articles/voa/1012545.md)
 
 9-17 [深化战略合作，中俄海军在日本海进行导弹和火炮发射演习](/articles/voa/1012546.md)
-
-9-16 [香港记协指各界对数十名记者被系统性滋扰未及以往重视](/articles/voa/1012547.md)
 
